--- a/Kaiserreich Korean Translation/localisation/KR_Two_Sicilies_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Two_Sicilies_l_english.yml
@@ -124,10 +124,10 @@ SIC_social_conservative_party:0 "기독교 민주주의"
 SIC_social_conservative_party_long:0 "기독교 민주주의"
 SIC_authoritarian_democrat_party:0 "농민당"
 SIC_authoritarian_democrat_party_long:0 "농민당"
-SIC_paternal_autocrat_party:0 "부르봉 나폴리 왕조"
-SIC_paternal_autocrat_party_long:0 "부르봉 나폴리 왕조"
-SIC_national_populist_party:0 "시칠리아 통합주의"
-SIC_national_populist_party_long:0 "시칠리아 통합주의"
+SIC_paternal_autocrat_party:0 "부르봉-나폴리 왕조"
+SIC_paternal_autocrat_party_long:0 "부르봉-나폴리 왕조"
+SIC_national_populist_party:0 "시칠리아 통합주의당"
+SIC_national_populist_party_long:0 "시칠리아 통합주의당"
 
 ### Cosmetic Tags ###
 #IES_social_democrat:0 "이탈리아 제국" all defined above
@@ -153,19 +153,19 @@ SIC_planning_grand_offensive:0 "대공세 계획"
 SIC_planning_grand_offensive_desc:0 "Invading the North will be no easy task; Terrain, climate and the logistics of French reinforcements all must be taken into account if we are to triumph in this dangerous battle"
 SIC_armored_thrusts:0 "Armoured Thrusts"
 SIC_armored_thrusts_desc:0 "The Syndicalists likely have battle lines waiting for us... to smash through them with the power of Italian engineering!"
-SIC_strike_now:0 "파업을 시작하라!"
+SIC_strike_now:0 "공격 개시!"
 SIC_strike_now_desc:0 "The time has come! The Syndicalists are busy elsewhere, and the opening we were waiting for has presented itself. Italy will be reclaimed!"
 SIC_apenini:0 "Arditi degli Appennini"
 SIC_apenini_desc:0 "The mountainous region in the border with the Syndicalist controlled areas will be a crucial battleground. As will be the Alps, once we are forced to face the French menace. Our elite troops, heirs of the surviving Alpini of the Italian Federal Army, will gallantly serve again"
 SIC_fusilero:0 "Sicilian Marine Corps"
 SIC_fusilero_desc:0 "Our navy can ensure superiority in the seas; with that advantage, we will strike at the coastlines of the Syndicalists and reclaim Italy for the Italians"
-SIC_army_reform:0 "육군 개혁 시작"
+SIC_army_reform:0 "육군 개혁 착수"
 SIC_army_reform_desc:0 "Our army is still in many ways a mish-mash of militias, old Federal Italian divisions, conscripts and volunteer foreigners. Organising it into an effective fighting force will be a complicated task"
 SIC_army_innovation:0 "메세의 개혁안"
 SIC_army_innovation_desc:0 "A small clique of generals, led by Giovanni Messe, a veteran of our War of Resistance, is planning audacious reforms to our military structure and planning. Perhaps allowing them to have their voice heard is in our best interest"
-SIC_he_protecc:0 "방어적 자세"
+SIC_he_protecc:0 "방어 태세"
 SIC_he_protecc_desc:0 "We are hopelessly outnumbered by the Third Internationale. The best course of action is to defend our perimeter defences until the time is right to strike down the Syndicalists in a devasting counteroffensive"
-SIC_artillery_batteries:0 "화력지원"
+SIC_artillery_batteries:0 "화력 지원"
 SIC_artillery_batteries_desc:0 "The Abruzzo line must be held if our plans are to succeed. We must ensure that our artillery has the firepower needed to properly beat back any offensive pushes from the Syndicalists"
 SIC_defend_sky:0 "제공권 방어"
 SIC_defend_sky_desc:0 "Maintaining Aerial Superiority will be an utterly vital matter in this war of national defence. We must ensure our planes are ready, modern and well crewed"
@@ -189,7 +189,7 @@ SIC_development:0 "메초조르노의 미래"
 SIC_development_desc:0 "Our status of being the wealthiest of the Italian nations is not due to our actual wealth, but due to how the other parts of the peninsula's assets are either war-torn or owned by foreign investors. We are effectively the last hope of Italian industry."
 SIC_agrarian_issue:0 "농지 문제"
 SIC_agrarian_issue_desc:0 "Ever since the invasion of the Lombards, our lands have been dominated by large-scale landholders. The situation only got worse through the last decades and centuries, and very few men hold almost all the land, creating significant tension in rural areas of our Kingdom"
-SIC_invest_modern_farming:0 "현대적 농사 방식"
+SIC_invest_modern_farming:0 "현대적 농업"
 SIC_invest_modern_farming_desc:0 "No more can the ploughshare and wheelbarrow truly be deemed the tools of the farmers; tractors and other machines of the modern age are slowly but surely taking their place"
 SIC_through_land_reform:0 "Thorough Land Reform"
 SIC_through_land_reform_desc:0 "With continued use of military force, intense political action and intervention by concerned community leaders, we will ensure that the issues of land distribution we face are dealt with in a timely fashion"
@@ -205,11 +205,11 @@ SIC_hvy_industry:0 "Construction Subsidies"
 SIC_hvy_industry_desc:0 "We must build faster! More forts, more trenches, more ports, more factories, more bases, more dockyards, more roads: All the needed building blocks of an independent power which we lack"
 SIC_hvy_industry2:0 "Heavy Industry Incentives"
 SIC_hvy_industry2_desc:0 "By investing into heavy industry, we can ensure that our nation's heavy industry can withstand the pressures of wartime"
-SIC_developed_nation:0 "산업 발전 집중"
+SIC_developed_nation:0 "산업 발전에 집중"
 SIC_developed_nation_desc:0 "While still an ongoing process, and an expensive one at that, we can ensure that our legacy of industrialisation is one that for centuries will have improved the Kingdom for the better. We will spare no expense."
 SIC_industrial_modernization:0 "산업 현대화"
 SIC_industrial_modernization_desc:0 "More than additional factories, we need our existing ones to work better, faster and be always modern. We cannot allow the great red shadow to outproduce our military!"
-SIC_dig_deeply_and_greedily:0 "깊고 탐욕스럽게 파내라"
+SIC_dig_deeply_and_greedily:0 "깊이, 더 깊이 파내자"
 SIC_dig_deeply_and_greedily_desc:0 "We will delve and search deep, survey new mines and ensure that we have the minerals needed to protect ourselves"
 SIC_BM_gonepoof:0 "위기를 끝내다"
 SIC_BM_gonepoof_desc:0 "At last, we have finally ended the struggling period of Black Monday and are ready to move on. But first, we need to ensure that its last ripples are no longer felt"
@@ -219,7 +219,7 @@ SIC_thriving_economy:0 "Thriving Economy"
 SIC_thriving_economy_desc:0 "Recovering from this crisis, at last, our economy marches on to a new future; hopefully one of peace. But we will be ready if that is not the case"
 SIC_BM_deal:0 "Dealing with the Crisis"
 SIC_BM_deal_desc:0 "Dealing with a recession this catastrophic won't be easy. Albeit time will be an ally in the recovery, we must act if we are to properly see this issue dealt with"
-SIC_infro:0 "기반시설 투자"
+SIC_infro:0 "기반 시설 투자"
 SIC_infro_desc:0 "As a historically rural region, little investment in the Railways and other vital infrastructure works was done in the Mezzogiorno, with the exception of works in the past 10 years. We must redouble our efforts"
 SIC_asuterity_measures:0 "Austerity Measures"
 SIC_asuterity_measures_desc:0 "Spending wisely is the key to good leadership. Our foes will envy the wealth we gain from little more than doing good common sense budgeting"
@@ -263,7 +263,7 @@ SIC_barbones_air_tree2_desc:0 "To truly win the war that approaches, we must ens
 SIC_barbones_air_tree3_desc:0 "Our industries must be able to produce the best aeroplanes they can, even if this means we must cut a few corners here and there"
 
 ### Foreign Policy Focuses ###
-SIC_old_order:0 "구 질서"
+SIC_old_order:0 "구질서"
 SIC_old_order_desc:0 "The Italian Federation, endures, and reborn into the new Confederation, where each state works with the other to bring prosperity and peace!"
 SIC_preserve_status_quo:0 "Preserve the Status Quo"
 SIC_preserve_status_quo_desc:0 "The Confederation respects regional differences, local customs and cultures and is far more representative than the Savoyard kingdom ever was. However, we must keep vigilant to remind would be traitors that we are still all Italians, and that our motherland must be defended"
@@ -275,7 +275,7 @@ SIC_imppero_italiano:0 "이탈리아 제1제국"
 SIC_imppero_italiano_desc:0 "In order to ensure our security and continuing stability, the Italian Federation will be reorganised into the first Italian Empire, to ensure a safer and more secure society. The states of the Federation will now be subjects of the Emperor, who just so happens to be the King of Sicily, as decided by a meeting of Federation notables"
 SIC_ittalia_irredenta:0 "이탈리아는 불완전하다!"
 SIC_ittalia_irredenta_desc:0 "The destiny of Italy is to reclaim its lost lands; no matter the cost!"
-SIC_foreign:0 "방어적인 동맹?"
+SIC_foreign:0 "방위 동맹?"
 SIC_foreign_desc:0 "The Syndicalists are part of their own Alliance, protected by the Union of Britain and France. We must find our own allies as a counterweight and free Italy once and for all"
 SIC_entente:0 "협상국 가입"
 SIC_aus:0 "오스트리아와의 연맹"
@@ -287,7 +287,7 @@ SIC_matter_of_fate:0 "이탈리아의 운명"
 SIC_matter_of_fate_desc:0 "With our great victory, a path must be taken by us on how to administer the North. To the victor, the spoils!"
 
 ### Constitutional Kingdom Focuses ###
-SIC_constitutional_kingdom:0 "입헌 왕국"
+SIC_constitutional_kingdom:0 "입헌왕국"
 SIC_constitutional_kingdom_desc:0 "Our young constitution has been under siege from radical elements since its creation. We will never let the light of democracy be put out from our brave Sicily"
 SIC_civil_liberties:0 "Protect Civil Liberties"
 SIC_civil_liberties_desc:0 "Many rights are often under risk in these times of almost imminent warfare; from the basic to the superfluous. None will be allowed to be at risk"
@@ -313,7 +313,7 @@ SIC_stable_democracy:0 "안정적인 민주주의"
 SIC_stable_democracy_desc:0 "As our government leaves and another takes its place, the democratic principles will always be respected, and the will of the people will endure"
 
 ### Organic Kingdom Focuses ###
-SIC_organic_kingdom:0 "유기적 왕국"
+SIC_organic_kingdom:0 "유기적인 왕국"
 SIC_organic_kingdom_desc:0 "The Two Sicilies are one, and yet many. Each castle, each village and each house, product of centuries of incredible history and brave accomplishments. Rather than copying bourgeoisie foreign concepts, we will make a government of our own, by the people, for the people, through our King"
 SIC_national_catholicism:0 "국가 카톨릭주의"
 SIC_national_catholicism_desc:0 "The people of Sicily are not bound by shallow ideas of Race or delusions of superiority, but by our unshaken faith and resolve to better ourselves and resist tyranny wherever that may lie!"
@@ -343,7 +343,7 @@ SIC_politics_desc:0 "Sicily will stand tall to the Red Tide. Every single person
 ### Events ###
 
 sic.1.t:0 "1936년의 양시칠리아 왕국"
-sic.1.d:0 "나폴레옹 전쟁이 끝나고, 두 개의 옛 왕국 - 나폴리와 시칠리아가 합쳐지며 양시칠리아 왕국이 탄생했고, 이 왕국은 샤르데냐가 이탈리아를 자신의 통치하에 통일되도록 강요했던 1860년까지 존속했습니다. 언제나 일반적으로 농업이 중심이었던 남부는 실질적으로 남부를 개발시키려는 의지가 전혀 없던 사보이 왕가의 치하에서 고통받았고, 가난이 도처에 만연하게 되었습니다.\n\n세계대전이 1914년 시작되며 이탈리아는 협상국을 택했고 더욱 몰락하게 되었습니다. 오스트리아인들은 이탈리아에 대해 승리를 거두자 이탈리아를 수많은 소국으로 쪼갰고 피비린내나는 내전의 잔해에서 양시칠리아가 다시 태어났습니다.\n\n전투가 끝난 이후 왕국은 사보이 왕가가 남긴 심각한 문제를 해결하기 위해 내부적으로 집중했고 정치적으로 성공한 사민주의자들은 왕국을 위한 새로운 길을 개척하는데 노력해왔습니다. 이에 적대하는 '양시칠리아 통합주의자'의 부상은 왕국의 정치에 극단적인 변화의 신호가 될 것입니다.\n\n오직 시간만이 그들이 권력을 거머쥘지 민주주의가 승리할지 말해줄 것입니다."
+sic.1.d:0 "나폴레옹 전쟁 이후 기존의 두 왕국 - 나폴리와 시칠리아가 합쳐지며 양시칠리아 왕국이 탄생했고, 이 왕국은 샤르데냐가 이탈리아를 자신의 통치하에 통일되도록 강요했던 1860년까지 존속했습니다. 언제나 일반적으로 농업이 중심이었던 남부는 실질적으로 남부를 개발시키려는 의지가 전혀 없던 사보이 왕가의 치하에서 고통받았고, 가난이 도처에 만연하게 되었습니다.\n\n세계대전이 1914년 시작되며 이탈리아는 협상국을 택했고 더욱 몰락하게 되었습니다. 오스트리아인들은 이탈리아에 대해 승리를 거두자 이탈리아를 수많은 소국으로 쪼갰고 피비린내나는 내전의 잔해에서 양시칠리아가 다시 태어났습니다.\n\n전투가 끝난 이후 왕국은 사보이 왕가가 남긴 심각한 문제를 해결하기 위해 내부적으로 집중했고 정치적으로 성공한 사민주의자들은 왕국을 위한 새로운 길을 개척하는데 노력해왔습니다. 이에 적대하는 '양시칠리아 통합주의자'의 부상은 왕국의 정치에 극단적인 변화의 신호가 될 것입니다.\n\n오직 시간만이 그들이 권력을 거머쥘지 민주주의가 승리할지 말해줄 것입니다."
 sic.1.a:0 "국왕 폐하 만세!"
 
 sic.2.t:0 "검은 월요일이 왕국을 강타하다"
