--- a/Kaiserreich Korean Translation/localisation/KR_Poland_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Poland_l_english.yml
@@ -427,18 +427,18 @@ poland.6.a:0 "자유롭게, 폴란드에 민주주의를 전파하자"
 poland.6.b:0 "정부가 붕괴했다!"
 poland.6.c:0 "군대를 불러서 새 정부를 만들어라."
 
-poland.7.t:0 "Chaos in the Countryside"
+poland.7.t:0 "지방의 혼란"
 poland.7.d:0 "After the collapse of the government in Poland, various factions have risen up and are vying for control of the country. Both the Syndicalist party and the Nationalist circles are strong enough to take over the Polish cities and countryside. With the remaining authorities sceptical of their own ability to retain what power they have left, most have given up and...."
 poland.7.a:0 "The Syndicalists take over!"
 poland.7.b:0 "The Nationalists take over!"
 
-poland.8.t:0 "A New Constitution"
-poland.8.d:0 "After the new King, [POL.GetLeader], promised sweeping reforms, we now have to think about what the reforms should actually entail."
-poland.8.a:0 "Focus on economic growth."
+poland.8.t:0 "새로운 헌법"
+poland.8.d:0 "새로운 왕 [POL.GetLeader]은(는) 철저한 개혁을 약속했고, 우리는 이제 개혁이 실제로 무엇에 초점을 맞출 것인지에 대한 생각을 해야 한다."
+poland.8.a:0 "경제 성장에 초점을 맞춰라."
 poland.8.b:0 "The Regency Council must elect a king! Now!"
-poland.8.c:0 "Focus on empowering the military."
-poland.8.e:0 "Focus on expanding royal power."
-poland.8.f:0 "Focus on uniting the nation."
+poland.8.c:0 "군대 성장에 초점을 맞춰라."
+poland.8.e:0 "왕실의 힘을 늘려라."
+poland.8.f:0 "국가를 단결시켜라."
 
 poland.9.t:0 "Another attempt at a King of Poland"
 poland.9.d:0 "Just after the Weltkrieg, the Regency Council made an attempt to elect a king of Poland. This attempt, however, was stalled by the Polish inability to firmly support a single candidate and by the Central Powers' apparent lack of interest. Now, with the 20th anniversary of Kingdom of Poland's proclamation approaching, the Regency Council wants to make one last attempt."
