--- a/Kaiserreich Korean Translation/localisation/KR_Cuba_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Cuba_l_english.yml
@@ -8,7 +8,7 @@ CUB_radical_socialist_party_long:0 "사회주의 운동- 혁명"
 CUB_syndicalist_party:0 "사회주의자"
 CUB_syndicalist_party_long:0 사회주의 운동 -노동자"
 CUB_social_democrat_party:0 "연합주의자"
-CUB_social_democrat_party_long:0 ""
+CUB_social_democrat_party_long:0 "연합주의자"
 CUB_social_liberal_party:0 "신자유주의자"
 CUB_social_liberal_party_long:0 "신자유주의당"
 CUB_market_liberal_party:0 "공화주의자"
