--- a/Kaiserreich Korean Translation/localisation/KR_Victory_Points_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Victory_Points_l_english.yml
@@ -420,7 +420,7 @@ VICTORY_POINTS_4925:0 "청두"
 VICTORY_POINTS_4948:0 "다카르"
 VICTORY_POINTS_4952:0 "베넹스타드"
 VICTORY_POINTS_4953:0 "주발푸르"
-VICTORY_POINTS_4956:0 "산루이스포토시주"
+VICTORY_POINTS_4956:0 "산루이스포토시"
 VICTORY_POINTS_4973:0 "호탄"
 VICTORY_POINTS_4982:0 "조지타운"
 VICTORY_POINTS_4987:0 "카트만두"
