--- a/Kaiserreich Korean Translation/localisation/KR_Polish_Lithuanian_Commonwealth_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Polish_Lithuanian_Commonwealth_l_english.yml
@@ -101,7 +101,7 @@ PLC_polish_language:0 "폴란드의 대중 여론"
 PLC_minority_rights:0 "소수의 권리"
 PLC_decentralization:0 "자유의 원칙"
 PLC_centralizing_power:0 "중앙 집권력"
-PLC_building_the_capital:0 "수도(Capital) 재개발"
+PLC_building_the_capital:0 "수도 재개발"
 PLC_vilnius_warsaw_railway:0 "빌뉴스-바르샤바 철도"
 PLC_an_absolute_monarch:0 "전제군주정"
 PLC_a_smaller_circle:0 "권력 집중"
@@ -192,7 +192,7 @@ PLC_trade_interdiction:0 "대서양 무역 차단"
 PLC_royal_air_force:0 "폴란드 왕립 공군"
 PLC_lithuanian_air_force:0 "리투아니아 공군"
 PLC_tactical_bombers:0 "전술 폭격기 지원"
-PLC_cas:0 "근접항공지원(CAS) 전술"
+PLC_cas:0 "근접항공지원 전술"
 PLC_radar:0 "레이더 기지 신설"
 PLC_paratroopers:0 "연방 공수부대"
 PLC_fighters:0 "새로운 전투기 설계"
@@ -201,7 +201,7 @@ PLC_rocket_experiments:0 "제트엔진 실험"
 PLC_air_tactics:0 "항공 전술"
 PLC_more_air_tactics:0 "합동 항공 전술"
 PLC_heavy_fighters:0 "중전투기 설계"
-PLC_strategic_bombers:0 "하늘에서 "
+PLC_strategic_bombers:0 "하늘에서 죽음이"
 
 PLC_poland_first_desc:0 "새로운 폴란드-리투아니아 연방은 새로운 수도가 필요합니다. 유서 깊은 옛 연방의 중심지이자 이 나라에서 가장 큰 도시인 바르샤바가 당연한 선택입니다."
 PLC_striking_the_balance_desc:0 "새로운 폴란드-리투아니아 연방은 새로운 수도가 필요합니다. 바르샤바나 빌뉴스 중 하나를 수도로 선택한다면 나머지 한 쪽이 분노할 것이기 때문에, 아마도 완전히 새로운 도시를 새로운 국가의 중심으로 선택하는 것이 좋을지도 모릅니다. 연방의 모든 사람들을 위한 상징적인 부활의 의미로 말이죠."
@@ -513,24 +513,24 @@ plcommon.45.t:0 "The LTIP Demands Control"
 plcommon.45.d:0 "The citizens of the Commonwealth's capital awoke otday to a surprising sight, thousands of Lithuanian nationals marching down the streets of the capital and demanding that their voices be heard in the government. Voldemaras' LTIP party had organised a march to the capital of the Commonwealth right under the nose of the regime, demanding both that the government be freed from "Polish meddling" and a new government be created, led by himself and his supporters. The situation is very dire, there are thousands of supporters of the LTIP Party in the capital. What should we do?"
 plcommon.45.a:0 "We must give in."
 plcommon.45.b:0 "Never!"
-plcommon.46.t:0 "Voldemaras' Coup"
+plcommon.46.t:0 "볼데마라스의 쿠데타"
 plcommon.46.d:0 "After giving in to their initial demands, the Lithuanian Nationalists have made an attempt to take power into their hands. There is violence in the streets of the capital as nationalist rebels attempt to size control of key government buildings. Only our armed forces can save us now...."
-plcommon.46.a:0 "The coup succeeds."
-plcommon.46.b:0 "Hold them back!"
+plcommon.46.a:0 "쿠데타가 성공했다."
+plcommon.46.b:0 "저들을 진압하라!"
 plcommon.47.t:0 "리투아니아 민족주의자들이 연방을 장악하다!"
-plcommon.47.d:0 "오늘 일찍, 리투아니아 민족주의 정당인 LTIP당이 연방의 정부를 장악하여 멘도그 3세를 체포하고 아우구스티나스 볼데마라스 대통령을 국가원수로 임명했습니다. 볼데마라스는 즉시 공식적으로 제국 조약에서 탈퇴하고 연방이 이제 '독일의 지배'로부터 자유롭다고 선언했습니다. 우리는 당장 이 위기에 대처해야 합니다. 어떻게 해야 하겠습니까?"
+plcommon.47.d:0 "오늘 일찍, 리투아니아 민족주의 정당인 LTIP당이 연방의 정부를 장악하여 멘도그 3세를 체포하고 아우구스티나스 볼데마라스 대통령을 국가 원수로 임명했습니다. 볼데마라스는 즉시 공식적으로 제국 조약에서 탈퇴하고 연방이 이제 '독일의 지배'로부터 자유롭다고 선언했습니다. 우리는 당장 이 위기에 대처해야 합니다. 어떻게 해야 하겠습니까?"
 plcommon.47.a:0 "우리 문제가 아니다."
 plcommon.47.b:0 "배신자들!"
 plcommon.48.t:0 "연방에 대한 복수"
 plcommon.48.d:0 "이제 억압적인 자칭 "연방"에 반격하고 그들을 지도에서 완전히 지워버릴 시간입니다!"
 plcommon.48.a:0 "복수하자!"
-plcommon.49.t:0 "The New Lithuanian Government"
-plcommon.49.d:0 "The LTIP Party took power in the Commonwealth and has restored Lithuania."
+plcommon.49.t:0 "새로운 리투아니아 정부"
+plcommon.49.d:0 "LTIP당이 연방의 정권을 장악하고, 리투아니아를 재건했습니다."
 plcommon.49.a:0 "Okay."
-plcommon.50.t:0 "The Reichspakt Question"
+plcommon.50.t:0 "제국 조약 문제"
 plcommon.50.d:0 "With the formation of the new Polish-Lithuanian Commonwealth, our political status in the Reichspakt alliance is unclear. While Lithuania was a member of the alliance, Poland was not, and with the combination of our two governments, it seems that there is an opportunity to use Poland's status as a member outside of the alliance to leverage our way out, if we so choose.\n\nHowever, Germany is sure to see an attempt to leave as a threat to their European hegemony, and may take action against us. What should we do?"
-plcommon.50.a:0 "We still need German protection."
-plcommon.50.b:0 "We have outgrown this decaying alliance."
+plcommon.50.a:0 "독일의 보호는 여전히 중요하다."
+plcommon.50.b:0 "이 부패한 동맹에 남기에 우리는 너무 강하다!"
 #fourth internationale events removed
 plcommon.54.t:0 "The PLC Joins the Internationale?"
 plcommon.54.d:0 "After their recent Syndicalist revolution, the new Polish-Lithuanian Commonwealth is seeking to join the ranks of true Syndicalism worldwide, the Third International. Should we allow them into our ranks?"
