--- a/Kaiserreich Korean Translation/localisation/KR_Wallonia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Wallonia_l_english.yml
@@ -45,7 +45,7 @@ WLL_Monarchy:0 "혁명의 기억"
 WLL_Monarchy_Army:0 "민심을 잃은 왕정"
 WLL_Monarchy_Disorderly:0 "왕실의 권력이 위태로워지다"
 WLL_Monarchy_Disorderly2:0 "확고해진 권력"
-WLL_Monarchy_Royal_Councillor:0 "왕립 평의원"
+WLL_Monarchy_Royal_Councillor:0 "왕립 평의회"
 WLL_Monarchy_Constitution:0 "왕립 헌법"
 WLL_Monarchy_Conscription:0 "왕립 군단"
 
@@ -56,9 +56,9 @@ WLL_Republic_Coalition_Socialists:0 "POB-PL 연합"
 WLL_Republic_Coalition_Catholics:0 "DC-PL 연합"
 WLL_Republic_Constitution_Socialist:0 "공화주의자 헌법"
 WLL_Republic_Constitution_Catholic:0 "공화주의자 헌법"
-WLL_Republic_Chant_Des_Wallons:0 "왈롱의 국가"
+WLL_Republic_Chant_Des_Wallons:0 "우알로니의 노래"
 
-WLL_German_Support:0 "독일 지원을 잃다"
+WLL_German_Support:0 "독일의 지지를 잃다"
 
 WLL_REX:0 "나약한 통제"
 WLL_REX_SOC:0 "생디칼리스트의 패배"
