--- a/Kaiserreich Korean Translation/localisation/KR_Nicaragua_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Nicaragua_l_english.yml
@@ -1,23 +1,23 @@
 l_english:
 ### Parties ###
-NIC_totalist_party_long:0 "국가 혁명당"
-NIC_totalist_party:0 "국혁당"
+NIC_totalist_party_long:0 "국가혁명당"
+NIC_totalist_party:0 "국가혁명당"
 NIC_syndicalist_party_long:0 "니카라과 사회당"
-NIC_syndicalist_party:0 "사회당"
+NIC_syndicalist_party:0 "니카라과 사회당"
 NIC_radical_socialist_party_long:0 "국민주권전선"
-NIC_radical_socialist_party:0 "국전"
+NIC_radical_socialist_party:0 "국민주권전선"
 NIC_social_democrat_party_long:0 "니카라과 농민당"
-NIC_social_democrat_party:0 "농민당"
-NIC_social_liberal_party_long:0 "자유주의혁명당"
-NIC_social_liberal_party:0 "자혁당"
-NIC_market_liberal_party_long:0 "자유헌정주의당"
-NIC_market_liberal_party:0 "자헌당"
+NIC_social_democrat_party:0 "니카라과 농민당"
+NIC_social_liberal_party_long:0 "자유혁명당"
+NIC_social_liberal_party:0 "자유혁명당"
+NIC_market_liberal_party_long:0 "자유헌정당"
+NIC_market_liberal_party:0 "자유헌정당"
 NIC_social_conservative_party_long:0 "보수당"
 NIC_social_conservative_party:0 "보수당"
 NIC_authoritarian_democrat_party_long:0 "자유국민당"
-NIC_authoritarian_democrat_party:0 "자국당"
+NIC_authoritarian_democrat_party:0 "자유국민당"
 NIC_paternal_autocrat_party_long:0 "국가야당연합"
-NIC_paternal_autocrat_party:0 "야당연합"
+NIC_paternal_autocrat_party:0 "국가야당연합"
 NIC_national_populist_party_long:0 "공화연합"
 NIC_national_populist_party:0 "공화연합"
 
