--- a/Kaiserreich Korean Translation/localisation/KR_Najd_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Najd_l_english.yml
@@ -138,7 +138,7 @@ SAU_extreme_jihad:0 "신앙의 전사들"
 SAU_hunt_apostates:0 "배교자 사냥"
 SAU_destroy_dissent:0 "반대자 말살"
 SAU_madrasah_funding:0 "마드라사 기금"
-SAU_kuffar_weaponry:0 "Kuffar Weaponry"
+SAU_kuffar_weaponry:0 "쿠파르 무기"
 SAU_the_caliphate:0 "사우드 가문 칼리프조"
 SAU_haia:0 "도덕 경찰 설립"
 SAU_succession_regulation:0 "정당한 계승"
@@ -182,7 +182,7 @@ SAU_oil_market:0 "Expand Oil Operations"
 SAU_oil_market_desc:0 "Our oil wells have been working at sub optimal capacity; even if we need foreign aid and plenty of time, ensuring we can exploit this resource should be our top priority"
 SAU_food_imports:0 "Intensify Food Imports"
 SAU_food_imports_desc:0 "It's no simple task to feed a nation in times of war, especially considering our enemies are likely to have naval superiority. We are planning to make stocks and secure supply channels to make sure that they cannot hope to starve us into submission, and to diminish all kinds of famine in times of peace"
-SAU_railway_logistics:0 "Railway Logistics"
+SAU_railway_logistics:0 "철도 계획"
 SAU_railway_logistics_desc:0 "Building a railway is more than placing the tracks, for much planning is involved before even the first bit is in place. The same should go for any army, for every force marches on it's stomach and we should use our new rail network to good use, and also expand it for military goals"
 SAU_industrial_raw_materials:0 "Industrial Raw Materials"
 SAU_industrial_raw_materials_desc:0 "Our lands hold little in way of metals usable for industry, and thus we have to search far and wide for viable deposits of minerals our industries are bout to be starved for, beginning in the mountainous regions of our land"
@@ -196,7 +196,7 @@ SAU_safety_net:0 "Combat Poverty"
 SAU_safety_net_desc:0 "More than our moral duty as Muslims, to aid the poor is the surest way to create prosperity and and a healthy realm. Little can we do to make the people love us, if they can barely scrape by bread and crumbs! We must ensure that not only the most poor, but also widows of the men who gave their lives for Arabia, have some kind of safety net to fall on, sponsored by our wise state."
 SAU_industrialization_effort:0 "Industrialisation Effort"
 SAU_industrialization_effort_desc:0 "We have built some factories, but we can scarcely be called and industrialised state. Our people still mostly live a way from the cities themselves after all. To change that, we must simply ensure that enough jobs are found at the cities, and continue to expand our ever growing industry"
-SAU_arms_industry:0 "Arms Industry"
+SAU_arms_industry:0 "군수 산업"
 SAU_arms_industry_desc:0 "Our industry now should focus on the defence of the realm, as we work to divert funds and resources towards defence expenses. We must now allow our armed forces to lack the vital equipment they so desperately need!"
 SAU_new_railroads:0 "새로운 철도"
 SAU_new_railroads_desc:0 "As we connect the many cities that dot our homeland, across sand and plans and sea, we see a path to a brand new future. Folks who had never seen a carriage now will see trains going through their lands into the sunset of Arabia's bright new future"
@@ -250,7 +250,7 @@ saud.1.a:0 "사우드 왕가 만세!"
 saud.3.t:0 "사우디 아라비아"
 saud.3.d:0 "Today with our victory over the house of Rashidis, the Saudis stand dominant. With this victory we shall rule over all Arabs!"
 saud.3.a:0 "사우드 왕가 만세!"
-saud.2.t:0 "The Sultan claims sovereignty over the Caliphate and the Holy Cities!"
+saud.2.t:0 "술탄께서는 칼리프국과 성지에 대한 통치권을 주장하셨습니다!"
 saud.2.d:0 "In a solemn and sacred ceremony the Saudi Sultan of Arabia has declared that he is the new Caliph of Islam. A new an pious dynasty will lead and guide the faithful once more."
 saud.2.a:0 "칼리프 만세!"
 
@@ -360,6 +360,6 @@ saud.55.d:0 "Berlin has accepted our terms and have sent the first batch of weap
 saud.55.a:0 "These weapons will annihilate the Rashidi scum!"
 
 ### Events ###
-saud.150.t:0 "The Ikhwan rebel!"
+saud.150.t:0 "이크완 반란!"
 saud.150.d:0 "The Ikhwan has been a strong army presence in Arabia for decades. They were also one of the principle reasons we were able to succeed in defeating the other Arab states and assert Saudi dominance in the region. However, the Ikhwan have always been a traditional group, highly religious, and vehemently against change and reform. They do not seem to understand that modernisation is necessary when ruling a nation. Normally, we can control any anger felt by the Ikhwan with promises that we won't modernise any more. However, it seems we've pushed them too far this time. Ikhwan soldiers have united under the leadership of Faisal Al Duwaish, an Ikhwan commander, who has declared that the Saudis are unfit to rule Arabia. Many Ikhwan militia have risen up, and fighting has already begun..."
-saud.150.a:0 "We will crush these rebels, for Arabia!"
+saud.150.a:0 "이 반란군을 쳐부술 것이다, 아라비아를 위하여!"
