--- a/Kaiserreich Korean Translation/localisation/KR_Countries_Cosmetic_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Countries_Cosmetic_l_english.yml
@@ -2262,13 +2262,13 @@ UKR_communist_social_liberal_DEF:0 "우크라이나 사회주의 공화국"
 UKR_communist_social_democrat:0 "우크라이나 사회주의 공화국"
 UKR_communist_social_democrat_ADJ:0 "우크라이나"
 UKR_communist_social_democrat_DEF:0 "우크라이나 사회주의 공화국"
-UKR_communist_radical_socialist:0 "Socialist 우크라이나 사회주의 공화국"
+UKR_communist_radical_socialist:0 "우크라이나 사회주의 공화국"
 UKR_communist_radical_socialist_ADJ:0 "우크라이나"
 UKR_communist_radical_socialist_DEF:0 "우크라이나 사회주의 공화국"
-UKR_communist_syndicalist:0 "Socialist 우크라이나 사회주의 공화국"
+UKR_communist_syndicalist:0 "우크라이나 사회주의 공화국"
 UKR_communist_syndicalist_ADJ:0 "우크라이나"
 UKR_communist_syndicalist_DEF:0 "우크라이나 사회주의 공화국"
-UKR_communist_totalist:0 "Socialist 우크라이나 사회주의 공화국"
+UKR_communist_totalist:0 "우크라이나 사회주의 공화국"
 UKR_communist_totalist_ADJ:0 "우크라이나"
 UKR_communist_totalist_DEF:0 "우크라이나 사회주의 공화국"
 
