--- a/Kaiserreich Korean Translation/localisation/KR_Afghanistan_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Afghanistan_l_english.yml
@@ -107,4 +107,4 @@ AFG_national_populist_party:0 "급진 이슬람주의자"
 AFG_national_populist_party_long:0 "급진 이슬람주의자"
 
 ### Tooltips ###
-AFG_chaos_tooltip:0 "이 선택은 아프가니스탄을 반란의 혼란에 빠뜨릴 것입니다. 정부가 무너지면 급진파 이슬람교도 나디르 샤가 이 나라를 통치하게 됩니다." #into chaos of rebellion? what?
+AFG_chaos_tooltip:0 "이 선택은 아프가니스탄을 반란의 혼란에 빠뜨릴 것입니다. 정부가 무너지면 급진파 이슬람교도 나디르 샤가 이 나라를 통치하게 됩니다." #뭐라고? 반란의 혼돈 속으로 말인가?
