--- a/Kaiserreich Korean Translation/localisation/KR_Combined_Syndicates_of_America_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Combined_Syndicates_of_America_l_english.yml
@@ -85,8 +85,8 @@ CSA_socialist_union_of_america_social_democrat_DEF:0 "아메리카 사회주의 
 
 ### Flags ###
 CSA_constitutional_convention_done:0 "제2차 제헌회의가 종결되다"
-CSA_foster_is_leader:0 "윌리엄 Z. 포스터가 주석이다"
-CSA_browder_is_leader:0 "얼 브라우더가 주석이다"
+CSA_foster_is_leader:0 "윌리엄 Z. 포스터가 대통령이다"
+CSA_browder_is_leader:0 "얼 브라우더가 대통령이다"
 CSA_new_industries:0 "자본주의 기업들이 노동자에 의해 전복되다"
 ### Ideas ###
 CSA_militia_idea:0 "혁명 민병대"
@@ -541,10 +541,10 @@ csa.6.t:0 "사회주의 헌법 - 경제"
 csa.6.d:0 "제 15조. 미국의 경제 체제의 근간은 모든 국민이 소유권을 가지는 공공 자산 형태의 생산수단에 대한 사회주의적 소유와 협동농장의 재산이다.\n\n제 16조. 지하의 모든 광물과 타 지하자원, 광산수와 약용수를 포함하는 수자원, 천연전력의 공급원, 그 어떠한 형태의 철도 및 항공 운송 수단, 우편물, 전신, 전화 및 방송은 공공 자산으로 한다.\n\n제 17조. 토지의 소유권은 해당 토지를 경작하는 자에게 부여된다. 협동농장과 기타 협동조합 및 이들이 공동으로 운영하는 자산은 생산 수단 및 규정된 목적을 달성하기 위해 필요한 기타 자산으로 구성된다. 협동농장 명의로 소유된 토지의 소유권은 항구적으로 보장된다.\n\n제 18조. 경제적인 사유 재산과 민간 사업의 자유는 보장된다. 사유 재산 상속의 자유는 보장된다. 상속권에 대해서는 법률로 규정한다. 누구도 개인에게 보장된 사유 재산의 권리를 인민 공동체에 피해를 가하기 위해 사용할 수 없다. 물가를 조작하고 시장을 독점하고 공공 경제의 이익을 손상시키기 위해 만들어진 카르텔, 신디케이트, 트러스트 및 이와 유사한 조직의 존재는 금지된다. 사적 재산은 공공의 이익을 위해 필요한 경우 제한되거나 징수될 수 있지만, 이는 오로지 법률에 의해서만 이루어진다. 해당 경우에 원 소유주가 받아야 하는 손해 배상의 가치는 법률로 규정한다. 같은 조건 하에서 국가 경제 또는 단일 기업의 특정 부분은 공공의 이익을 위해 필요한 경우 법률에 의해 국유화될 수 있다."
 csa.6.a:0 "승인되었다"
 
-csa.7.t:0 "사회주의 헌법 - 의회와 최고지도자"
-sa.7.d:0 "중립적 대표단들이 몇 차례 휴회를 시도했지만 소용이 없었습니다. 행정권에 대한 논쟁으로 회의는 난관에 봉착했으며, 대표단들이 지치기 전에 조속한 결정이 필요합니다. 한쪽은 IWW가 주장하는 것으로, 하나의 거대 노조 계획에는 한 명의 최고위 행정 관료가 필요하지 않고 대통령과 같은 최고지도자 직위는 그저 휴이 롱 같은 선천적인 반동적 전체주의자들을 양산하는 자리라며, 새로운 미국에 이런 직위가 있을 자리는 없다고 못박았습니다. 반대로 언론에서 표현하듯 AFL과 전위주의자 그리고 보존주의자들은 모두 미국을 대표하는 강력한 얼굴마담이 필요하다고 생각하며, 최고지도자라는 강력한 지위가 없다면 리드처럼 미국을 구할 수 없다고 주장합니다."
+csa.7.t:0 "사회주의 헌법 - 의회와 대통령"
+sa.7.d:0 "중립적 대표단들이 몇 차례 휴회를 시도했지만 소용이 없었습니다. 행정권에 대한 논쟁으로 회의는 난관에 봉착했으며, 대표단들이 지치기 전에 조속한 결정이 필요합니다. 한쪽은 IWW가 주장하는 것으로, 하나의 거대 노조 계획에는 한 명의 최고위 행정 관료가 필요하지 않고 대통령이라는 직위는 그저 휴이 롱 같은 선천적인 반동적 전체주의자들을 양산하는 자리라며, 새로운 미국에 이런 직위가 있을 자리는 없다고 못박았습니다. 반대로 언론에서 표현하듯 AFL과 전위주의자 그리고 보존주의자들은 모두 미국을 대표하는 강력한 얼굴마담이 필요하다고 생각하며, 대통령이라는 강력한 지위가 없다면 리드처럼 미국을 구할 수 없다고 주장합니다."
 csa.7.a:0 "의회가 행정권을 행사한다."
-csa.7.b:0 "권한을 이양받은 최고지도자직이 필요하다."
+csa.7.b:0 "권한을 이양받은 대통령이 필요하다."
 
 csa.8.t:0 "사회주의 헌법 - 권력 집중 혹은 권력 분산"
 csa.8.d:0 "회의의 재개 이후, 그 어떤 시기보다 더 분열되고 있습니다. IWW의 핵심 인사들은 남은 헌법조항에 국가의 폭정을 막기 위해 조합원에 대한 평생 보장을 통한 사회복지 강화 및 종신 고용이라는 엄격한 도그마를 밀어 붙이고 있습니다. 심지어 몇몇 IWW 대표단들은 AFL이 적대적이였으며 그들이 자본주의로 회귀하기 원한다는 말까지 했습니다. 이에 대해서 AFL은 전위주의자들이 주장한 정부에서의 노동의 존엄성 강조에 마음을 기울이고 있습니다. 이 주장을 산업 노조주의를 기술 노조주의를 통해 지적하며 동일 노동, 동일 임금이라는 목표는 충분히 IWW의 목적인 임금 노동의 폐지를 대체할 수 있다고 말합니다.  AFL은 이것이 노조 선거를 통한 51 %의 독재에 대항해 49%를 안전을 지킬 수 있다고 주장합니다."
@@ -573,13 +573,13 @@ csa.11.e:0 "월리엄 Z 포스터가 선거에서 승리할 것이다."
 ### Reconstruction Events ###
 
 csa.12.t:0 "미국 제일당원 재판"
-csa.12.d:0 "혁명이 끝남에 따라서 우리와 싸웠던 적을 심판할 시간이 왔습니다. 얼 브라우더에 따르면 휴이 롱은 우리 사회주의에 좋은 동맹이 될 수 있다고 주장합니다. 프란시스 타운센드 우리 또한 그의 복지계획이 옳은 방향이라고 보지만, 그의 권위주의적 관행은 정말로 끔찍했습니다. 롱의 가족들과 그와 관련된 자들은 망명한 지금 제일당 지도부를 우리의 사슬에 남겨 놓을 수 있을지도 모릅니다. 남부의 제일당 핵심당원이었던 프렌시스 타운센트는 제일당의 극단적 군국주의가 휴이롱주의 때문이 아니라 남부 표퓰리즘 때문이라고 변호하면서 일부 배심원단들이 흔들렸습니다. 그리고 최종적인 재판 결과는.......  
+csa.12.d:0 "혁명이 끝남에 따라서 우리와 싸웠던 적을 심판할 시간이 왔습니다. 얼 브라우더에 따르면 휴이 롱은 우리 사회주의에 좋은 동맹이 될 수 있다고 주장합니다. 프란시스 타운센드 우리 또한 그의 복지계획이 옳은 방향이라고 보지만, 그의 권위주의적 관행은 정말로 끔찍했습니다. 롱의 가족들과 그와 관련된 자들은 망명한 지금 제일당 지도부를 우리의 사슬에 남겨 놓을 수 있을지도 모릅니다. 남부의 제일당 핵심당원이었던 프렌시스 타운센트는 제일당의 극단적 군국주의가 휴이롱주의 때문이 아니라 남부 표퓰리즘 때문이라고 변호하면서 일부 배심원단들이 흔들렸습니다. 그리고 최종적인 재판 결과는......."
 csa.12.a:0 "제일당 지도부를 사면해라"
 csa.12.b:0 "제일당 지도부는 유죄다."
 csa.12.c:0 "모든 당원들의 재산을 압류하고 체포해라"
 
 csa.13.t:0 "구정권에 대한 재판"
-csa.13.d:0 "혁명이 끝남에 따라서 우리와 싸웠던 적을 심판할 시간이 왔습니다. 정부를 장악하고 시민의 권리를 정지시킨 것에 대해서 이전 연방 정치인인 더글라스 맥아더에 대한 고발이 있었고, 보수적인 민주당원이자 구시대의 기업과 사회를 대표하는 헨리 모겐소 주니어가 망명간 멕아더를 대신해서 재판에 섰습니다. 그의 주장에 따르면 오직 맥아더 통치 아래에서만 유대인에 대한 제일당의 잔인한 공격을 막을 수 있었다고 하면서 멕아더 개인이 초-법적인 권력을 가지기 꺼렸다는 점을 언급하며 개인적으로 jamex coxey라는 사회주의자를 존경한다는 진술로 일부 배심원단을 흔들었습니다. 그리고 최종적인 재판 결과는....  "
+csa.13.d:0 "혁명이 끝남에 따라서 우리와 싸웠던 적을 심판할 시간이 왔습니다. 정부를 장악하고 시민의 권리를 정지시킨 것에 대해서 이전 연방 정치인인 더글라스 맥아더에 대한 고발이 있었고, 보수적인 민주당원이자 구시대의 기업과 사회를 대표하는 헨리 모겐소 주니어가 망명간 멕아더를 대신해서 재판에 섰습니다. 그의 주장에 따르면 오직 맥아더 통치 아래에서만 유대인에 대한 제일당의 잔인한 공격을 막을 수 있었다고 하면서 멕아더 개인이 초-법적인 권력을 가지기 꺼렸다는 점을 언급하며 개인적으로 jamex coxey라는 사회주의자를 존경한다는 진술로 일부 배심원단을 흔들었습니다. 그리고 최종적인 재판 결과는...."
 csa.12.a:0 "연방 지도부를 사면해라"
 csa.12.b:0 "연방 지도부는 유죄다."
 csa.12.c:0 "모든 연방 지지자들의 재산을 압류하고 체포해라"
@@ -647,80 +647,80 @@ csa.26.b:0 "업턴 싱클레어"
 csa.26.c:0 "프랭크 본"
 csa.26.e:0 "노먼 토마스"
 
-csa.27.t:0 "[GetYear]년 의장 선거"
-csa.27.d:0 "오늘은 [GetYear]년 대선이 치뤄지는 날입니다. 어느 당이 표를 많이 가져가고 [Root.GetNameDef]의 새 의장을 배출해낼까요?"
+csa.27.t:0 "[GetYear]년 대통령 선거"
+csa.27.d:0 "오늘은 [GetYear]년 대선이 치뤄지는 날입니다. 어느 당이 표를 많이 가져가고 [Root.GetNameDef]의 새 대통령을 배출해낼까요?"
 csa.27.a:0 "[CSA_synd_name]"
 csa.27.c:0 "[CSA_radsoc_name]"
 
 csa.28.t:0 "[GetYear]년 [CSA_synd_name] 전당대회"
-csa.28.d.president:0 "[CSA_synd_name]은 다가올 의장 선거에 만장일치로 [CSA.GetLeader]를 후보로 재지명했습니다."
-csa.28.d.not_president:0 "[GetYear]년 [CSA_synd_name] 전당대회가 열렸으며, 논의되어야 할 중요한 문제가 많습니다. 그 중 가장 중요한 것은 다가올 대선에서 누가 의장 후보가 되냐는 것입니다."
+csa.28.d.president:0 "[CSA_synd_name]은 다가올 대통령 선거에 만장일치로 [CSA.GetLeader]를 후보로 재지명했습니다."
+csa.28.d.not_president:0 "[GetYear]년 [CSA_synd_name] 전당대회가 열렸으며, 논의되어야 할 중요한 문제가 많습니다. 그 중 가장 중요한 것은 다가올 대선에서 누가 대통령 후보가 되냐는 것입니다."
 csa.28.a:0 "해리 브리지스"
 csa.28.b:0 "프랭크 T. 존스"
 csa.28.c:0 "프랭크 리틀"
-csa.28.e:0 "[CSA.GetLeader] 의장동지, 축하드립니다!"
+csa.28.e:0 "[CSA.GetLeader] 각하, 축하드립니다!"
 
 csa.29.t:0 "[GetYear]년 [CSA_radsoc_name] 전당대회"
-csa.29.d.president:0 "[CSA_radsoc_name]은 다가올 의장 선거에 만장일치로 [CSA.GetLeader]를 후보로 재지명했습니다."
-csa.29.d.not_president:0 "[GetYear]년 [CSA_radsoc_name] 전당대회가 열렸으며, 논의되어야 할 중요한 문제가 많습니다. 그 중 가장 중요한 것은 다가올 대선에서 누가 의장 후보가 되냐는 것입니다."
+csa.29.d.president:0 "[CSA_radsoc_name]은 다가올 대선에 만장일치로 [CSA.GetLeader]를 후보로 재지명했습니다."
+csa.29.d.not_president:0 "[GetYear]년 [CSA_radsoc_name] 전당대회가 열렸으며, 논의되어야 할 중요한 문제가 많습니다. 그 중 가장 중요한 것은 다가올 대선에서 누가 대통령 후보가 되냐는 것입니다."
 csa.29.a:0 "세이무어 스테드먼"
 csa.29.b:0 "윌리엄 E. 로드리게즈"
 csa.29.c:0 "모리스 힐아웃"
-csa.28.e:0 "[CSA.GetLeader] 의장동지, 축하드립니다!"
+csa.28.e:0 "[CSA.GetLeader] 각하, 축하드립니다!"
 
-csa.30.t:0 "[GetYear]년 의장 선거"
-csa.30.d:0 "오늘은 [GetYear]년 대선이 치뤄지는 날입니다. 어느 당이 표를 많이 가져가고 [Root.GetNameDef]의 새 의장을 배출해낼까요?"
+csa.30.t:0 "[GetYear]년 대선"
+csa.30.d:0 "오늘은 [GetYear]년 대선이 치뤄지는 날입니다. 어느 당이 표를 많이 가져가고 [Root.GetNameDef]의 새 대통령을 배출해낼까요?"
 csa.30.a:0 "[CSA_synd_name]"
 csa.30.c:0 "[CSA_radsoc_name]"
 
 csa.31.t:0 "[GetYear]년 [CSA_synd_name] 전당대회"
-csa.31.d.president:0 "[CSA_synd_name]은 다가올 의장 선거에 만장일치로 [CSA.GetLeader]를 후보로 재지명했습니다."
+csa.31.d.president:0 "[CSA_synd_name]은 다가올 대선에 만장일치로 [CSA.GetLeader]를 후보로 재지명했습니다."
 csa.31.d.president_steps_down:0 "[CSA.GetLeader] is term-limited and thus will be stepping down. As such, at the [GetYear] Convention of the [CSA_synd_name], the topic of who shall be the next nominee for the upcoming presidential election is one of the main topics on the agenda."
-csa.31.d.not_president:0 "[GetYear]년 [CSA_synd_name] 전당대회가 열렸으며, 논의되어야 할 중요한 문제가 많습니다. 그 중 가장 중요한 것은 다가올 대선에서 누가 의장 후보가 되냐는 것입니다."
+csa.31.d.not_president:0 "[GetYear]년 [CSA_synd_name] 전당대회가 열렸으며, 논의되어야 할 중요한 문제가 많습니다. 그 중 가장 중요한 것은 다가올 대선에서 누가 대통령 후보가 되냐는 것입니다."
 csa.31.a:0 "유진 데니스"
 csa.31.b:0 "엘머 앨리슨"
 csa.31.c:0 "엘리자베스 노드"
-csa.28.e:0 "[CSA.GetLeader] 의장동지, 축하드립니다!"
+csa.28.e:0 "[CSA.GetLeader] 각하, 축하드립니다!"
 
 csa.32.t:0 "[GetYear]년 [CSA_radsoc_name] 전당대회"
-csa.32.d.president:0 "[CSA_radsoc_name]은 다가올 의장 선거에 만장일치로 [CSA.GetLeader]를 후보로 재지명했습니다."
+csa.32.d.president:0 "[CSA_radsoc_name]은 다가올 대선에 만장일치로 [CSA.GetLeader]를 후보로 재지명했습니다."
 csa.32.d.president_steps_down:0 "[CSA.GetLeader] is term-limited and thus will be stepping down. As such, at the [GetYear] Convention of the [CSA_radsoc_name], the topic of who shall be the next nominee for the upcoming presidential election is one of the main topics on the agenda."
-csa.32.d.not_president:0 "[GetYear]년 [CSA_radsoc_name] 전당대회가 열렸으며, 논의되어야 할 중요한 문제가 많습니다. 그 중 가장 중요한 것은 다가올 대선에서 누가 의장 후보가 되냐는 것입니다."
+csa.32.d.not_president:0 "[GetYear]년 [CSA_radsoc_name] 전당대회가 열렸으며, 논의되어야 할 중요한 문제가 많습니다. 그 중 가장 중요한 것은 다가올 대선에서 누가 대통령 후보가 되냐는 것입니다."
 csa.32.a:0 "데이비드 두빈스키"
 csa.32.b:0 "존 L. 루이스"
 csa.32.c:0 "L. E. 카터필드"
-csa.28.e:0 "[CSA.GetLeader] 의장동지, 축하드립니다!"
+csa.28.e:0 "[CSA.GetLeader] 각하, 축하드립니다!"
 
-csa.33.t:0 "[GetYear]년 의장 선거"
-csa.33.d:0 "오늘은 [GetYear]년 대선이 치뤄지는 날입니다. 어느 당이 표를 많이 가져가고 [Root.GetNameDef]의 새 의장을 배출해낼까요?"
+csa.33.t:0 "[GetYear]년 대선"
+csa.33.d:0 "오늘은 [GetYear]년 대선이 치뤄지는 날입니다. 어느 당이 표를 많이 가져가고 [Root.GetNameDef]의 새 대통령을 배출해낼까요?"
 csa.33.a:0 "[CSA_synd_name]"
 csa.33.c:0 "[CSA_radsoc_name]"
 
 csa.34.t:0 "[GetYear]년 세계산업노동자연맹 전당대회"
-csa.34.d.president:0 "세계산업노동자연맹은 의장 선거에 [CSA.GetLeader]를 만장일치로 다시 후보로 지명했습니다."
+csa.34.d.president:0 "세계산업노동자연맹은 대선에 [CSA.GetLeader]를 만장일치로 다시 후보로 지명했습니다."
 csa.34.d.president_steps_down:0 "[CSA.GetLeader] is term-limited and thus will be stepping down. As such, at the [GetYear] Convention of the [CSA_synd_name], the topic of who shall be the next nominee for the upcoming presidential election is one of the main topics on the agenda."
-csa.34.d.not_president:0 "[GetYear]년 [CSA_synd_name] 전당대회가 열렸으며, 논의되어야 할 중요한 문제가 많습니다. 그 중 가장 중요한 것은 다가올 대선에서 누가 의장 후보가 되냐는 것입니다."
+csa.34.d.not_president:0 "[GetYear]년 [CSA_synd_name] 전당대회가 열렸으며, 논의되어야 할 중요한 문제가 많습니다. 그 중 가장 중요한 것은 다가올 대선에서 누가 대통령 후보가 되냐는 것입니다."
 csa.34.a:0 "유진 데니스"
 csa.34.b:0 "헤닝 A. 블로멘"
 csa.34.c:0 "존 베르나드"
-csa.28.e:0 "[CSA.GetLeader] 의장동지, 축하드립니다!"
+csa.28.e:0 "[CSA.GetLeader] 각하, 축하드립니다!"
 
 csa.35.t.cio:0 "[GetYear]년 [CSA_synd_name] 전당대회"
-csa.35.d.president:0 "[CSA_synd_name]은 다가올 의장 선거에 만장일치로 [CSA.GetLeader]를 후보로 재지명했습니다."
+csa.35.d.president:0 "[CSA_synd_name]은 다가올 대선에 만장일치로 [CSA.GetLeader]를 후보로 재지명했습니다."
 csa.35.d.president_steps_down:0 "[CSA.GetLeader] is term-limited and thus will be stepping down. As such, at the [GetYear] Convention of the [CSA_radsoc_name], the topic of who shall be the next nominee for the upcoming presidential election is one of the main topics on the agenda."
-csa.35.d.not_president:0 "[GetYear]년 [CSA_synd_name] 전당대회가 열렸으며, 논의되어야 할 중요한 문제가 많습니다. 그 중 가장 중요한 것은 다가올 대선에서 누가 의장 후보가 되냐는 것입니다."
+csa.35.d.not_president:0 "[GetYear]년 [CSA_synd_name] 전당대회가 열렸으며, 논의되어야 할 중요한 문제가 많습니다. 그 중 가장 중요한 것은 다가올 대선에서 누가 대통령 후보가 되냐는 것입니다."
 csa.35.a:0 "오클리 C. 존슨"
 csa.35.b:0 "베이어드 러스틴"
 csa.35.c:0 "달링턴 후프스"
-csa.28.e:0 "[CSA.GetLeader] 의장동지, 축하드립니다!"
+csa.28.e:0 "[CSA.GetLeader] 각하, 축하드립니다!"
 
-csa.36.t:0 "[GetYear]년 의장 선거"
-csa.36.d:0 "오늘은 [GetYear]년 대선이 치뤄지는 날입니다. 어느 당이 표를 많이 가져가고 [Root.GetNameDef]의 새 의장을 배출해낼까요?"
+csa.36.t:0 "[GetYear]년 대선"
+csa.36.d:0 "오늘은 [GetYear]년 대선이 치뤄지는 날입니다. 어느 당이 표를 많이 가져가고 [Root.GetNameDef]의 새 대통령을 배출해낼까요?"
 csa.36.a:0 "[CSA_synd_name]"
 csa.36.c:0 "[CSA_radsoc_name]"
 
 csa.37.t:0 "총서기장 선거"
-csa.37.d:0 "대선이 끝났으며, 이제는 분리된 선거인 인민대표평의회의 총서기장 선거가 다가왔습니다. 누가 다음 총서기장이 되어야 할까요?"
+csa.37.d:0 "대선이 끝났으며, 이제는 별개의 선거인 인민대표평의회 총서기장 선거가 다가왔습니다. 누가 다음 총서기장이 되어야 할까요?"
 csa.37.a:0 "아르투로 지오반니티"
 csa.37.b:0 "엘리자베스 걸리 플린"
 csa.37.c:0 "다니엘 호안"
@@ -743,8 +743,8 @@ csa.40.e:0 "베이어드 러스틴"
 
 ### USAS events 51 - 75 ###
 
-csa.50.t.browder:0 "Browder's Second in Command"
-csa.50.t.foster:0 "Foster's Second in Command"
+csa.50.t.browder:0 "브라우더 정권의 2인자"
+csa.50.t.foster:0 "포스터 정권의 2인자"
 csa.50.d:0 "Now that [CSA.GetLeader] is in power, he has to make the choice as to who he should appoint as his second in command. Whom shall he pick?"
 csa.50.a:0 "존 J. 발람"
 csa.50.b:0 "잭 슐만"
@@ -754,32 +754,32 @@ csa.50.f:0 "맥스 베다흐트"
 csa.50.g:0 "제임스 W. 포드"
 csa.50.h:0 "구스 홀"
 
-csa.51.t:0 "[GetYear]년 주석 선거"
+csa.51.t:0 "[GetYear]년 대선"
 csa.51.d:0 "The presidential election of [GetYear] is here with much fanfare. As expected, [CSA.GetLeader] is in the lead, but as the government has promised a fair and open election it is anyone's guess as to who will win after the debates and all the campaigning is done. Who will emerge victorious in [GetYear]?"
 csa.51.a:0 "[CSA.GetLeader] 각하, 축하드립니다!"
-csa.51.b:0 "이것봐, 아직도 [CSA.GetLeader] 잖아!"
+csa.51.b:0 "이것 봐, 아직도 [CSA.GetLeader] 잖아!"
 csa.51.c:0 "[CSA.GetLeader]? 또?"
 csa.51.d:0 "공정하지도 않고 개방되어있지도 않아보이는군..."
 
-csa.52.t:0 "권력투쟁"
+csa.52.t:0 "권력 투쟁"
 csa.52.d:0 "윌리엄 Z 포스터와 얼 브라우더는 오랫동안 서로를 인민의 적으로 여겨왔고, 이는 권력투쟁 과정에서도 마찬가지였습니다. 혁명의 물결이 막바지에 치달음에 따라 이들의 권력투쟁은 새로운 국면으로 치달았습니다. 이 사태가 어떻게 끝날지 감히 말하기는 어렵습니다. 몇몇 인민들은 둘중 하나가 권력투쟁에서 패배할 때 일어날 사태를 두려워하고 있습니다."
 csa.52.a:0 "좋지 않아..."
 
 csa.53.t:0 "포스터가 브라우더를 비난하다"
 csa.53.d:0 "윌리엄 Z 포스터는 공개연설에서 브라우더를 비판했습니다. 포스터는 브라우더의 방법을 폭압적이라고 비난하면서 자신의 경제적 전체주의의 입장을 표명했습니다. 또한 포스터는 브라우더를 수정주의자라고 격하하며 미국을 퇴폐한 노동자 국가로 만든다고도 비판했습니다."
-csa.53.a:0 "That traitor will be dealt with."
+csa.53.a:0 "패배자가 곧 반역자가 된다"
 
-csa.54.t:0 "Browder Reassigned to Europe"
-csa.54.d:0 "Following Earl Browder's denounced of President Foster in a public speech, Earl Browder has been reassigned to a newly-created party position in Europe. This new position, as dictated by President Foster, entails Browder oversee furniture assembly and candlestick making unions that are so vital to our economy. Such an illustrious post demands that Browder not return until his year-long tenure is up. Unfortunately, communication to this international facility is spotty at times, so Browder will no longer be able to coordinate with his party allies back in America."
-csa.54.a:0 "Monitor his telegrams as well."
+csa.54.t:0 "브라우더가 유럽으로 좌천당하다"
+csa.54.d:0 "얼 브라우더가 공개 연설에서 포스터 대통령을 비난한 후, 얼 브라우더는 유럽에서 새로 만들어진 직책에 재발령되었습니다. 포스터 대통령이 직접 지시해 만들어진 이 새로운 직책은 우리 경제에 퍽이나 중요한 '가구 조립 및 촛대 제조 감독관'입니다. 또한 발령서에는 브라우더가 '가구 조립 및 촛대 제조 감독관'의 임기인 1년을 채울 때까지 돌아오지 말 것을 요구하고 있습니다. 불행하게도 그가 부임할 해외 시설은 가끔 통신 상태가 좋지 못하기 때문에, 브라우더는 더 이상 미국에 있는 그의 정치적 동맹들과 협력할 수 없을 것입니다."
+csa.54.a:0 "그가 보내는 모든 전보도 감시하라."
 
-csa.55.t:0 "포스터 체포"
+csa.55.t:0 "포스터의 체포"
 csa.55.d:0 "The reactionary Foster has been declared a traitor and enemy of the people. Evidence has been found out how William Z. Foster is working with counter-revolutionary groups. Thanks to the Hall-Ballam Act, our government is not powerless to stop Foster. While Foster still reins in his clique, news is being spread throughout the nation about his vile and despicable behavior in the Daily Worker and he will soon be arrested and brought to trial."
-csa.55.a:0 "또다른 반동분자가 곧 감옥에 가겠군."
+csa.55.a:0 "또다른 '반동분자'가 곧 감옥에 가겠군."
 
-csa.56.t:0 "브라우더 체포"
+csa.56.t:0 "브라우더의 체포"
 csa.56.d:0 "The traitorous nature of the reactionary Browder has been discovered. Evidence has been found out how Earl Browder is working with counter-revolutionary groups abroad while at his post. Thanks to the Hall-Ballam Act, our government is not powerless to stop Browder. While Browder still reins in his clique, news is being spread throughout Congress about his vile and despicable behavior in the Daily Worker and he will soon be extradited and brought to trial."
-csa.56.a:0 "또다른 반동분자가 곧 감옥에 가겠군."
+csa.56.a:0 "또다른 '반동분자'가 곧 감옥에 가겠군."
 
 csa.57.t:0 "포스터의 재판"
 csa.57.d:0 "The Supreme Court has unanimously found William Z. Foster guilty of being a reactionary enemy of the people. They have declared that as such that he will be executed. We no longer have to deal with his poison damaging America any more."
@@ -789,15 +789,15 @@ csa.58.t:0 "브라우더의 재판"
 csa.58.d:0 "The Supreme Court has unanimously found Earl Browder guilty of being a reactionary enemy of the people. They have declared that as such that he will be executed. We no longer have to deal with his poison damaging America any more."
 csa.58.a:0 "그의 죽음은 배신자의 말로이다"
 
-csa.59.t:0 "윌리엄 Z. 포스터가 망명길에 오르다"
+csa.59.t:0 "윌리엄 Z. 포스터가 망명하다"
 csa.59.d:0 "William Z. Foster has escaped jail in America and has fled abroad. We shall catch this reactionary traitor and make sure that his poison ends. It may take time but the reactionary traitor shall be caught."
 csa.59.a:0 "그는 결국 잡힐 것이다."
 
-csa.60.t:0 "얼 브라우더가 망명길에 오르다"
+csa.60.t:0 "얼 브라우더가 망명하다"
 csa.60.d:0 "Earl Browder has escaped jail in America and has fled abroad. We shall catch this reactionary traitor and make sure that his poison ends. It may take time but the reactionary traitor shall be caught."
 csa.60.a:0 "그는 결국 잡힐 것이다."
 
-csa.61.t:0 "윌리엄 Z. 포스터가 암살달하다"
+csa.61.t:0 "윌리엄 Z. 포스터가 암살당하다"
 csa.61.d:0 "It has taken time however, the newly created C.I.A have killed William Z. Foster. A single shot has ended the life of one of the most dangerous enemies to America."
 csa.61.a:0 "드디어"
 
@@ -821,7 +821,7 @@ csa.65.a:0 "The revolution will be pure"
 
 csa.66.t:0 "인민재판"
 csa.66.d:0 "A number of trials have been conducted of prominent members, who have shown reactionary tendencies. Most of whom are not aligned with [CSA.GetLeader] are being brought up in these trials. Counter-revolutionaries who wish to reverse the revolution have been found guilty of being the enemy of the people. The most repentant of these reactionaries are now on death row, while the stubborn few are still being pressed for information on their accomplices."
-csa.66.a:0 "반동분자들은 그들의 운명을 맞이하리라"
+csa.66.a:0 "반동분자들은 걸맞는 운명을 맞이하리라"
 
 csa.67.t:0 "버틀러의 쿠데타"
 csa.67.d:0 "The unthinkable has happened. Smedley Butler has gathered supporters among the unions and marched into Washington, denouncing [CSA.GetLeader] as a tyrant and a dictator. The rest of America watches with bated breath to see what happens in Washington. [CSA.GetLeader] has responded by calling for as many allies in the military, including the militias, to seize the traitorous generals before the revolution dies fighting 'another Macarthur'. The Vanguardist forces, wearing the same uniforms as Butler's forces, have engaged in a chaotic fight in the capital. Through the friendly fire and threatening mortars....."
@@ -830,7 +830,7 @@ csa.67.b:0 "Butler's Forces are routed"
 
 csa.68.t:0 "민주주의 복원"
 csa.68.d:0 "'Americans did not fight and die in the revolution to overthrow a capitalistic dictatorship only to install a socialist dictatorship. The president, however, corrupted the revolution and tainted it. I have removed him from power, not to make myself a dictator, but to stop a tyrant. A new and free election shall be held within a year's time.' With these words on the radio from Smedly Butler, America was shocked to find that the government had been overthrown. Perhaps, however, some measure of freedom had been restored."
-csa.68.a:0 "지금이 바로 민주주의며, 영원할 것이다"
+csa.68.a:0 "지금이 바로 민주주의이며, 이는 영원할 것이다"
 
 csa.69.t:0 "Self Determination in the Black Belt"
 csa.69.d:0 "Before the revolution, there were plans by [CSA.GetLeader] to implement an autonomous region within the South for the African-American community. With the ascension of William Z Foster comes a dedication to the dream to create a more perfect union, as opposed to a greater union. Foster has drafted a plan with James W. Ford to ensure the perpetual safety and self determination of African American minorities in the South. This plan is to create a Black Belt in the south of autonomous communities with their own representatives separate from Congress. While the ruling party as a whole supports this, several critics from other parties note that this policy would create an unequal standard for civil rights."
