--- a/Kaiserreich Korean Translation/localisation/KR_Afghanistan_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Afghanistan_l_english.yml
@@ -98,7 +98,7 @@ AFG_social_liberal_party_long:0 "친서방파"
 AFG_market_liberal_party:0 "친서방파"
 AFG_market_liberal_party_long:0 "친서방파"
 AFG_social_conservative_party:0 "학술파"
-AFG_social_conservative_party_long:0 ""
+AFG_social_conservative_party_long:0 "학술파"
 AFG_authoritarian_democrat_party:0 "왕실"
 AFG_authoritarian_democrat_long:0 "왕실"
 AFG_paternal_autocrat_party:0 "왕실"
