--- a/Kaiserreich Korean Translation/localisation/KR_Companies_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Companies_l_english.yml
@@ -11,106 +11,106 @@ generic_industrial_company:0 "일반 산업 회사"
 generic_naval_company:0 "일반 선박 제조사"
 
 ### American Union State ###
-kr_auto_ordnance_company_tex:0 "Auto-Ordnance Company"
-kr_colt_tex:0 "Colt"
-kr_colt_tex_desc:0 "With sales in a slump due to the Great Depression, the Colt company diversified into a variety of industries. In lieu of rising tensions between the company and labour organisations throughout the Northeast, Colt sought then to move its arms manufacturing entirely. It found support in then-Senator Huey Long to finance its relocation to the Southeast and the company ultimately set up shop in the burgeoning city of Tallahassee."
-kr_winchester_western_tex:0 "Winchester Repeating Arms"
-kr_springfield_armory_tex:0 "Springfield Armory"
-kr_smith_wesson_tex:0 "Smith & Wesson"
-kr_browning_tex:0 "Browning Arms"
-kr_remington_tex:0 "Remington Arms"
-kr_remington_tex_desc:0 "Concerned about increasingly militant labour organisations in the Northeast and the potential for disruption to its business, the DuPont chemical company sought to relocate its subsidiary, Remington. Ultimately, it received federal funding to do just that in exchange for its assistance in the development of several new cutting-edge ammunition depots throughout the west. In its new home in Denver, Remington produces its renowned firearms just as before, but given the company's ties with the old regime, under the watchful eye of the victorious Union State."
-kr_harrington_richardson_tex:0 "Harrington & Richardson Arms Company"
-kr_marlin_firearms_tex:0 "Marlin Firearms"
-kr_marlin_firearms_tex_desc:0 "Prior to the outbreak of the American Civil War, the Marlin Company had been struggling after decades of declining sales. The patronage of the New England government for the war effort reversed the companies fortunes and it quickly re-established its place among the many greater arms manufacturers of the Northeast. With the company allowed to continue operations following the victory of the Union State, it continued to find success."
-kr_savage_arms_tex:0 "Savage Arms"
-kr_watervliet_arsenal_tex:0 "Watervliet Arsenal"
-kr_marble_arms_tex:0 "Marble Arms"
-kr_western_cart_tex:0 "Western Cartridge Company"
-kr_fedlabs_tex:0 "Federal Laboratories"
-kr_fedlabs_tex_desc:0 "Originally established near Pittsburgh to produce less-than-lethal and riot-control armaments, the management and ownership of Federal Laboratories secretly packed up the entireity of its machining and smuggled it into federal held territory in Maryland. The new Maryland-based Federal Laboratories immediately set to work producing small arms for the civil war. Following the victory of the Union State, the company was reorganised and resumed operations under careful state supervision."
-kr_sacremento_depot_tex:0 "Sacremento Army Depot"
+kr_auto_ordnance_company_tex:0 "오토-오드넌스"
+kr_colt_tex:0 "콜트"
+kr_colt_tex_desc:0 "대공황에서 비롯한 판매 부진으로 인해 콜트사는 다양한 분야의 산업으로 다각화했습니다. 콜트사는 노사 관계가 점점 악화되는 북동부 지역 외로의 군수 산업 이전을 시도했습니다. 상원의원 휴이 롱의 경제적 지원을 받아 남동부로 이전한 콜트사는 급성장하는 도시 탤러해시에 총포상을 차리게 되었습니다."
+kr_winchester_western_tex:0 "윈체스터 자동소총 회사"
+kr_springfield_armory_tex:0 "스프링필드 조병창"
+kr_smith_wesson_tex:0 "스미스&웨슨"
+kr_browning_tex:0 "브라우닝"
+kr_remington_tex:0 "레밍턴"
+kr_remington_tex_desc:0 "북동부의 점점 더 공격적으로 변해가는 노조들과, 사업에 차질을 빚을 가능성에 대한 우려 때문에, 듀퐁 화학회사는 자회사 레밍턴의 이전을 시도했습니다. 동부 지역의 몇몇 신형 탄약고 개발을 지원해 준 대가로, 레밍턴사는 연방 정부의 재정 지원을 받았습니다. 덴버의 새 공장에서 레밍턴사는 옛날처럼 명성있는 총을 만들어내지만, 전 정권과의 거래를 의식한 승리한 미주 연합의 감시 하에 있습니다."
+kr_harrington_richardson_tex:0 "해링턴&리처드슨 총기 회사"
+kr_marlin_firearms_tex:0 "멀린 소화기"
+kr_marlin_firearms_tex_desc:0 "2차 미국 내전 발발 전에, 멀린사는 수십년간의 판매 위축으로 재정난을 겪어 왔습니다. 그러나 전쟁 물자 생산을 위한 뉴잉글랜드 정부의 투자는 멀린사의 운명을 바꾸었고 북동부의 거대 총기제조사 사이에서의 멀린사의 위치를 재정립했습니다. 회사가 미주 연합의 승리 후에도 장사를 허가받아서, 멀린사는 계속 성공해 나갈 겁니다."
+kr_savage_arms_tex:0 "세비지"
+kr_watervliet_arsenal_tex:0 "워터블리트 조병창"
+kr_marble_arms_tex:0 "마블"
+kr_western_cart_tex:0 "웨스턴 화약회사"
+kr_fedlabs_tex:0 "연방 연구소"
+kr_fedlabs_tex_desc:0 "원래 연방 연구소는 피츠버그 인근에서 비살상 시위 진압용 무기를 만들었지만, 연방 연구소의 경영진과 소유자들은 비밀리에 공장의 모든 장비를 연방정부의 통제를 받는 메릴랜드로 밀반입했습니다. 메릴랜드로 이전한 연방 연구소는 즉시 내전에 필요한 소화기의 양산을 시작했습니다. 미주 연합의 승리 이후, 연방 연구소는 재조직되었고 주 정부의 삼엄한 감시 하에 운영을 재개했습니다."
+kr_sacremento_depot_tex:0 "새크라멘토 육군 공창"
 
-kr_bfgoodrichcompany_tex:0 "BFGoodrich"
-kr_koch_tex:0 "Wood River Oil"
-kr_westinghouse_tex:0 "Westinghouse"
-kr_raytheon_tex:0 "Raytheon"
-kr_dupont_tex:0 "DuPont"
-kr_us_steel_tex:0 "U.S. Steel"
+kr_bfgoodrichcompany_tex:0 "BF굿리치"
+kr_koch_tex:0 "우드리버 오일"
+kr_westinghouse_tex:0 "웨스팅하우스"
+kr_raytheon_tex:0 "레이시온"
+kr_dupont_tex:0 "듀퐁"
+kr_us_steel_tex:0 "U.S. 스틸"
 kr_att_tex:0 "AT&T"
-kr_bethlehem_steel_tex:0 "Bethlehem Steel"
-kr_general_electric_tex:0 "General Electric"
+kr_bethlehem_steel_tex:0 "베들레헴 철강"
+kr_general_electric_tex:0 "제너럴 일렉트릭"
 kr_ibm_company_tex:0 "IBM"
-kr_standard_oil_tex:0 "Standard Oil of California"
-kr_phelpsdodge_tex:0 "Phelps Dodge"
-kr_magnolia_oil_tex:0 "Magnolia Petroleum"
-kr_gulf_oil_tex:0 "Gulf Oil"
+kr_standard_oil_tex:0 "스탠다드 오일 캘리포니아"
+kr_phelpsdodge_tex:0 "펠프스 닷지"
+kr_magnolia_oil_tex:0 "매그놀리아 석유"
+kr_gulf_oil_tex:0 "걸프 오일"
 
-kr_cushman_tex:0 "Cushman"
-kr_cushman_tex_desc:0 "The Cushman company, known for its motorised scooters, was pressed into the production of military vehicles for the Federal war effort following the outbreak of the second American Civil War; it continues to produce trucks and half-tracks under the Union State."
-kr_winton_tex:0 "Winton"
-kr_willys_tex:0 "Willys"
-kr_studebacker_tex:0 "Studebaker"
-kr_chrysler_tex:0 "Chrysler"
-kr_ford_tex:0 "Ford"
-kr_general_motors_tex:0 "General Motors"
-kr_catterpillar_tex:0 "Caterpillar"
-kr_army_ordnance_department_tex:0 "Army Ordnance Department"
-kr_nash_tex:0 "Nash Motors"
-kr_buick_tex:0 "Buick"
-kr_cunningham_tex:0 "Cunningham"
-kr_cunningham_tex_desc:0 "Thanks to funding from the New England regime, bankruptcy would not be the end of the Cunningham company. While its firest foray into tank development may have born little fruit, the new Cunningham focuses mainly on the production of light armoured vehicles, and by all accounts has been greatly succesful, even after the victory of the Union State."
-kr_american_car_tex:0 "American Car and Foundry"
-kr_jackson_tex:0 "Jackson"
-kr_dorris_tex:0 "Dorris"
-kr_dorris_tex_desc:0 "The bankruptcy of the original Dorris Motor Corporation was a major plow to the already declining St. Louis automobile industry. With the outbreak of the civil war the old Dorris factory was acquired by local business interests to produce much needed tanks for the Federalist war effort. Once the company was approved to resume operations by the victorious Union State, production of tanks and civilian vehicles resumed quickly."
-kr_bantam_tex:0 "American Bantam"
-kr_dodge_tex:0 "Dodge"
-kr_packard_tex:0 "Packard"
-kr_mack_trucks_tex:0 "Mack"
-kr_marmon_tex:0 "Marmon-Herrington"
-kr_davis_tex:0 "Davis"
-kr_white_motor_tex:0 "White Motor"
-kr_stutz_tex:0 "Stutz"
-kr_stutz_tex_desc:0 "The Great Depression hit the Stutz motor company hard, nearly destroying its luxury car business entirely. The company, however, with its ties to the South through its racing pedigree and fearing increasingly unruly conditions in its native Indian, relocated to Florida with the financial support of state politicians."
-kr_american_locomotive_tex:0 "American Locomotive Company"
-kr_hudson_tex:0 "Hudson"
-kr_rock_island_arsenal_tex:0 "Rock Island Arsenal"
-kr_fisher_tank_arsenal_tex:0 "Fisher Tank Arsenal"
-kr_baldwin_locomotive_works_tex:0 "Baldwin Locomotive Works"
-kr_kenworth_tex:0 "Kenworth Motor Truck"
-kr_pacific_foundry_tex:0 "Pacific Car and Foundry"
+kr_cushman_tex:0 "쿠시만"
+kr_cushman_tex_desc:0 "오토바이로 유명한 쿠시만사는 2차 미국 내전 발발 이후 연방정부의 전쟁 수행에 필요한 군용 차량을 생산하도록 강요받았습니다. 쿠시만사는 미주 연합의 통제 하에 트럭과 반궤도장갑차를 이어서 생산하고 있습니다."
+kr_winton_tex:0 "윈턴"
+kr_willys_tex:0 "윌리스"
+kr_studebacker_tex:0 "스튜드베이커"
+kr_chrysler_tex:0 "크라이슬러"
+kr_ford_tex:0 "포드"
+kr_general_motors_tex:0 "제너럴 모터스"
+kr_catterpillar_tex:0 "캐터필러"
+kr_army_ordnance_department_tex:0 "육군병기부"
+kr_nash_tex:0 "내시 모터스"
+kr_buick_tex:0 "뷰익"
+kr_cunningham_tex:0 "커닝햄"
+kr_cunningham_tex_desc:0 "뉴잉글랜드 정권의 투자 덕분에 커닝햄사는 파산을 면할 수 있었습니다. 커닝햄사의 전차 연구가 작은 결실을 맺었는지는 모르겠지만, 커닝햄사는 경장갑차를 생산하는 데 중점을 두고 있고, 미주 연합이 승리한 이후에도 커닝햄사는 성공을 거두고 있습니다."
+kr_american_car_tex:0 "ACF"
+kr_jackson_tex:0 "잭슨"
+kr_dorris_tex:0 "도리스"
+kr_dorris_tex_desc:0 "도리스사의 파산은 쇠퇴해가는 세인트루이스의 자동차 산업에 치명타를 주었습니다. 내전이 발발하자, 옛 도리스사의 공장들은 지역 사업가들에 매입되어 연방주의자의 전쟁 수행에 필요한 많은 전차를 생산했습니다. 회사가 승리한 미주 연합으로부터 운영 재개를 허락받자, 전차와 민수용 차량의 생산은 빠르게 재개되었습니다."
+kr_bantam_tex:0 "아메리칸 밴텀"
+kr_dodge_tex:0 "닷지"
+kr_packard_tex:0 "파크야드"
+kr_mack_trucks_tex:0 "맥"
+kr_marmon_tex:0 "마몬-해링턴"
+kr_davis_tex:0 "데이비스"
+kr_white_motor_tex:0 "화이트 모터"
+kr_stutz_tex:0 "스투츠"
+kr_stutz_tex_desc:0 "대공황은 스투츠사를 강타해서 고급차 사업을 박살낼 뻔 했습니다. 그러나 스투츠사는 racing pedigree로 남부와 연이 있고 점점 더 통제불능이 되어 가는 원주민을 두려워했기 때문에 플로리다주 정치인들로부터 경제적 지원을 받아 그곳으로 회사를 이전했습니다."
+kr_american_locomotive_tex:0 "ALCO"
+kr_hudson_tex:0 "허드슨"
+kr_rock_island_arsenal_tex:0 "록 아일랜드 조병창"
+kr_fisher_tank_arsenal_tex:0 "피셔 탱크 조병창"
+kr_baldwin_locomotive_works_tex:0 "볼드윈 기관차 공사"
+kr_kenworth_tex:0 "켄우스 모터 트럭"
+kr_pacific_foundry_tex:0 "PCF"
 
-kr_north_american_aviation_tex:0 "North American Aviation"
-kr_bell_aircraft_tex:0 "Bell"
-kr_beechcraft_tex:0 "Beechcraft"
-kr_grumman_tex:0 "Grumman"
-kr_boeing_tex:0 "Boeing"
-kr_curtiss_wright_tex:0 "Curtiss-Wright"
-kr_lockheed_tex:0 "Lockheed"
-kr_ryan_aircraft_tex:0 "Ryan"
-kr_ryan_aircraft_tex_desc:0 "While Tubal Claude Ryan's role in the creation in the famous Spirit of St. Louis is often overstated, the Ryan company's relationship with the Lindberghs drew the company from the shores of San Diego to North Carolina and the then-emerging Longist bloc."
-kr_douglas_tex:0 "Douglas"
-kr_glenn_martin_tex:0 "Glenn L. Martin Company"
-kr_pan_american_tex:0 "Pan American Airways"
-kr_fairchild_tex:0 "Fairchild"
-kr_northrop_tex:0 "Northrop Corporation"
-kr_vought_tex:0 "Vought"
-kr_vultee_aircraft_tex:0 "Vultee"
-kr_hughes_aircraft_tex:0 "Hughes Aircraft"
-kr_brewster_tex:0 "Brewster"
-kr_consolidated_tex:0 "Consolidated"
+kr_north_american_aviation_tex:0 "북아메리카 항공"
+kr_bell_aircraft_tex:0 "벨"
+kr_beechcraft_tex:0 "비치크래프트"
+kr_grumman_tex:0 "그루먼"
+kr_boeing_tex:0 "보잉"
+kr_curtiss_wright_tex:0 "커티스-라이트"
+kr_lockheed_tex:0 "록히드"
+kr_ryan_aircraft_tex:0 "라이언"
+kr_ryan_aircraft_tex_desc:0 "T.C. 라이언은 유명한 스피릿 오브 세인트루이스의 설계에서 중요한 역할을 맡은 것으로 종종 과장되지만, 라이언사와 찰스 린드버그 간의 관계는 라이언사를 샌디에고의 해변가에서 노스캐롤라이나로 이전하도록 이끌었습니다."
+kr_douglas_tex:0 "더글러스"
+kr_glenn_martin_tex:0 "글렌 L. 마틴"
+kr_pan_american_tex:0 "팬암"
+kr_fairchild_tex:0 "페어차일드"
+kr_northrop_tex:0 "노스롭"
+kr_vought_tex:0 "보우트"
+kr_vultee_aircraft_tex:0 "벌티"
+kr_hughes_aircraft_tex:0 "휴즈 항공"
+kr_brewster_tex:0 "브루스터"
+kr_consolidated_tex:0 "컨설리데이티드"
 
-kr_kaiser_shipyards_tex:0 "Kaiser Shipyards"
-kr_mare_island_shipyard_tex:0 "Mare Island Naval Shipyard"
-kr_newport_news_tex:0 "Newport News Shipbuilding"
-kr_norfolk_shipyard_tex:0 "Norfolk Naval Shipyard"
-kr_new_york_shipbuilding_tex:0 "New York Shipbuilding"
-kr_electric_boat_tex:0 "Electric Boat"
-kr_philadelphia_naval_shipyard_tex:0 "Philadelphia Naval Shipyard"
-kr_higgins_tex:0 "Higgins"
-kr_ingalls_shipyards_tex:0 "Ingalls Shipbuilding"
-kr_ingalls_shipyards_tex_desc:0 "Robert Ingersoll Ingalls, founder of the shipbuilding company which bears his name, struggled for years to acquire funding for his grand shipyard on the Pascagoula river. With the outbreak of the civil war, the Union State, desperately lacking in warships and merchant vessels alike, earmarked a substantial sum to the company, kickstarting its development."
+kr_kaiser_shipyards_tex:0 "카이저 조선소"
+kr_mare_island_shipyard_tex:0 "메어 아일랜드 해군 조선소"
+kr_newport_news_tex:0 "뉴포트 뉴스 조선소"
+kr_norfolk_shipyard_tex:0 "노포크 해군 조선소"
+kr_new_york_shipbuilding_tex:0 "뉴욕 조선소"
+kr_electric_boat_tex:0 "일렉트릭 보트"
+kr_philadelphia_naval_shipyard_tex:0 "필라델피아 해군 조선소"
+kr_higgins_tex:0 "히긴스"
+kr_ingalls_shipyards_tex:0 "인걸스 조선소"
+kr_ingalls_shipyards_tex_desc:0 "자신의 이름으로 된 조선소의 설립자인 로버트 I. 인걸스는 몇년간 그의 패스커굴라 강에 있는 거대한 조선소에 투자를 유치하려 노력해 왔습니다. 내전이 터지면서, 상선과 군함 모두 심각하게 부족했던 미주 연합은 막대한 자금을 배정하여 조선소의 개발에 박차를 가하고 있습니다."
 
 ### Armenia ###
 zangezur_combine:0 "장에주르 구리 & 몰리브덴 조합"
@@ -382,9 +382,9 @@ aviatik_kroatien_slawonien:0 "Aviatik Kroatien-Slawonien"
 brodosplit:0 "Brodosplit"
 
 ### Cuba ###
-havanashipyard:0 "Havana Shipyard"
-Waco_Aircraft_Company:0 "WACO Aircraft Company"
-Waco_Aircraft_Company_desc:0 "Lacking a substantial domestic aircraft manufacturer, with the collapse of the Ohio-based WACO Aircraft Company, whose biplanes had achieved a stellar reputation among Cuban pilots, in 1931, the Cuban government purchased the company and enticed its design team to move to Cuba as well."
+havanashipyard:0 "아바나 조선소"
+Waco_Aircraft_Company:0 "WACO 항공사"
+Waco_Aircraft_Company_desc:0 "쿠바 조종사들 사이에서 극찬을 받은 복엽기의 제조사인, 오하이오에 본사가 있는 WACO 항공사가 파산하자, 국내에 규모있는 항공기 제조사가 없는 쿠바 정부는 1931년에 WACO를 인수했고 모든 설계부서를 쿠바로 옮기게 했습니다."
 
 ### Denmark ###
 atlas_maskinfabrik:0 "Atlas Maskinfabrik AS"
@@ -432,20 +432,20 @@ INC_Bason:0 "Bason"
 INC_Songthu:0 "Song Thu"
 
 ### Dutch East Indies ###
-shell_dei:0 "Shell"
+shell_dei:0 "쉘"
 nimef:0 "NIMEF"
 machinefabriek_braat:0 "Machine Fabriek Braat"
 billiton:0 "Billiton Maatschappij"
 artillerie_constructie_winkel:0 "Artillerie Constructie Winkel"
-daf_dei:0 "DAF Oost-Indië"
-spyker_dei:0 "Spyker-Trompenburg Singapur"
-fokker_dei:0 "Fokker Insulinde"
+daf_dei:0 "DAF 동인도"
+spyker_dei:0 "스파이커-트롬펜부르크 싱가포르"
+fokker_dei:0 "포커 인도네시아"
 koolhoven_dei:0 "Koolhoven Soerabaja"
 kn_rotterdamsche_lloyd:0 "Koninklijke Rotterdamsche Lloyd"
 
 ### India ###
 tata_steel:0 "타타 철강"
-punjab_ordnance_factories:0 "Punjab Ordnance Factories"
+punjab_ordnance_factories:0 "펀자브 화포 공장"
 ashok_leyland:0 "Ashok Leyland"
 jessop_company:0 "Jessop & Company Limited"
 tata_air:0 "타타 항공"
@@ -471,13 +471,13 @@ mauser_egypt:0 "Mauser Ägypten"
 shoubra_engineering:0 "Shoubra Engineering"
 
 ### Ethiopia ###
-ethiopian_electric_power:0 "Ethiopian Electric Power Corporation"
-university_college_addis_ababa:0 "University College of Addis Ababa"
-addis_ababa_arsenal:0 "Addis Ababa Arsenal"
-eth_state_artillery_factory:0 "State Artillery Factory"
-ethiopia_railway_company:0 "Imperial Railway Company of Ethiopia"
-addis_ababa_aircraft:0 "Addis Ababa Aircraft Workshop"
-massawa_naval_yard:0 "Massawa Naval Yard"
+ethiopian_electric_power:0 "에티오피아 전력"
+university_college_addis_ababa:0 "아디스아바바 대학"
+addis_ababa_arsenal:0 "아디스아바바 조병창"
+eth_state_artillery_factory:0 "국영 대포 공장"
+ethiopia_railway_company:0 "제국 철도 회사 에티오피아"
+addis_ababa_aircraft:0 "아디스아바바 항공기 공장"
+massawa_naval_yard:0 "마사와 해군 조선소"
 
 ### FOP ###
 somisa_FOP:0 "SOMISA"
@@ -674,20 +674,20 @@ maf_kaiserliche_werft:0 "Kaiserliche Werft Dar-es-Salaam"
 deutsche_ost_afrika_linie:0 "Deutsche Ost-Afrika Linie"
 
 ### Nationalist France ###
-schneider:0 "Schneider"
+schneider:0 "슈나이더"
 machines_bull:0 "Compagnie des Machines Bull"
 compagnie_petroles:0 "Compagnie Française des Pétroles"
-darne:0 "Darne"
+darne:0 "다르느"
 manufacture_armes_tunis:0 "Manufacture Nationale d'Armes de Tunis"
 hotchkiss:0 "호치키스"
 delaunay_belleville:0 "Delaunay-Belleville"
 vetra:0 "Vetra"
-renault:0 "Renault"
-peugeot:0 "Peugeot"
-citroen:0 "Citroën"
-dewoitine:0 "Dewoitine"
-bloch:0 "Bloch"
-amiot:0 "Amiot"
+renault:0 "르노"
+peugeot:0 "푸조"
+citroen:0 "시트로앵"
+dewoitine:0 "드와틴"
+bloch:0 "블로흐"
+amiot:0 "아미오"
 bleriot:0 "Blériot"
 latecoere:0 "Latécoère"
 oran_construction_navale:0 "Société de Construction Navale d'Oran"
@@ -1098,33 +1098,33 @@ rrm_fabrica_avioane_set:0 "Fabrica de Avioane SET"
 rrm_santierul_naval_constanta:0 "Şantierul Naval Constanţa"
 
 ### Russia ###
-putilov:0 "Putilovsky Zavod"
-oktava:0 "Oktava"
-branobel:0 "Branobel"
-degtyaryov:0 "Dеgtyarevа Oruzheiny Zavod"
-izjevskij_mekhanitsjeskij:0 "Izjevskij Mekhanitsjeskij Zavod"
-sestroretskiy_oruzheynyy:0 "Sestroretskiy Oruzheynyy Zavod"
-tulsky_oruzheiny:0 "Tulsky Oruzheiny Zavod"
-gosudarstvennyy_obukhovskiy:0 "Gosudarstvennyy Obukhovskiy Zavod"
-motovilikha:0 "Motovilikha"
-russko_baltiisky:0 "Russko-Baltiisky Vagonny Zavod"
-nizhegorodsky_avtomobilny:0 "Nizhegorodsky Avtomobilny Zavod"
-uralmash:0 "Uralmash"
-chelyabinskiy_traktornyy:0 "Chelyabinskiy Traktornyy Zavod"
-uralvagonzavod:0 "Uralvagonzavod"
-avtomobilnoe_moskovskoe:0 "Avtomobilnoe Moskovskoe Obshchestvo"
-mikoyan_gurevich:0 "Mikoyan-Gurevich"
-lavochkin:0 "Lavochkin"
-dux:0 "Dux"
-seversky_aircraft:0 "Seversky"
-yakovlev:0 "Yakovlev"
-tupolev:0 "Tupolev"
-sukhoi:0 "Sukhoi"
-ilyushin:0 "Ilyushin"
-sikorsky_aircraft:0 "Sikorsky"
-baltiysky_verfi:0 "Baltiysky Verfi"
-admiralteiskie_verfi:0 "Admiralteiskie Verfi"
-rubin:0 "Rubin"
+putilov:0 "푸틸로프 공장"
+oktava:0 "악타바"
+branobel:0 "브라노빌"
+degtyaryov:0 "데그챠레프 화기 공장"
+izjevskij_mekhanitsjeskij:0 "IZh"
+sestroretskiy_oruzheynyy:0 "세스트로레스크 조병창"
+tulsky_oruzheiny:0 "툴라 무기 공장"
+gosudarstvennyy_obukhovskiy:0 "국립 아브홉스키 공장"
+motovilikha:0 "모토빌리하"
+russko_baltiisky:0 "루스코-발티스키 기관차 공장"
+nizhegorodsky_avtomobilny:0 "NAZ"
+uralmash:0 "우랄마시"
+chelyabinskiy_traktornyy:0 "첼랴빈스크 트랙터 공장"
+uralvagonzavod:0 "우랄바곤자보드"
+avtomobilnoe_moskovskoe:0 "모스크바 자동차 회사"
+mikoyan_gurevich:0 "미코얀-구레비치"
+lavochkin:0 "라보츠킨"
+dux:0 "둑스"
+seversky_aircraft:0 "세베르스키"
+yakovlev:0 "야코블레프"
+tupolev:0 "투폴레프"
+sukhoi:0 "수호이"
+ilyushin:0 "일류신"
+sikorsky_aircraft:0 "시코르스키"
+baltiysky_verfi:0 "발틱 조선소"
+admiralteiskie_verfi:0 "아드미랄체이스키 조선소"
+rubin:0 "루빈 함선 설계국"
 
 ### Sardinia ###
 societa_mineraria_sarda:0 "Società Mineraria Sarda"
@@ -1525,7 +1525,7 @@ kr_ingalls_shipyards_usa:0 "Ingalls Shipbuilding"
 kr_ingalls_shipyards_usa_desc:0 "Robert Ingersoll Ingalls, founder of the shipbuilding company which bears his name, struggled for years to acquire funding for his grand shipyard on the Pascagoula river. With the outbreak of the civil war, the Union State, desperately lacking in warships and merchant vessels alike, earmarked a substantial sum to the company, kickstarting its development. With the Union State's defeat to the Federal government, the company was reorganised and reopened."
 
 ### Belorussia ###
-white_ruthenia_state_university:0 "Belorussia State University"
+white_ruthenia_state_university:0 "벨라루스 국립대"
 gomel_radio_plant:0 "Homel Radio Plant"
 minsk_automobile_plant:0 "민스크 자동차 공장"
 baranovichi_aviation_repair_plant:0 "Baranavičy Aviation Repair Plant"
