누락기호수정

--- a/Kaiserreich Korean Translation/localisation/KR_Lithuania_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Lithuania_l_english.yml
@@ -214,7 +214,7 @@ lithuania.5.a:0 "이제 누가 우리의 버터와 거위를 살까?"
 
 lithuania.6.t:0 "검은 월요일에 대한 대응"
 lithuania.6.d:0 "오늘 리투아니아의 경제 문제를 논의하기 위해 세이마스 긴급회의가 소집됐습니다. 리투아니아 경제는 갈수록 악화되고 있습니다. 점점 더 많은 공장이 문을 닫고 있습니다. 농작물을 팔 수 없는 농민들은 소들을 팔고 인도에 우유를 엎질렀습니다. 실업자들은 살아남기 위해 무료 식당으로 모이고 있습니다. 세이마스는 두개의 주요 당파로 나뉘어 있는데, 둘 다 이 상황을 해결하고 검은 월요일에 의해 야기된 대공황을 벗어날 방법에 대한 그들만의 생각을 가지고 있습니다."
-lithuania.6.a:0 V.V. 차르네키스 - 국가는 수익성 있는 산업을 건설하고 산업화해야 한다."
+lithuania.6.a:0 "V.V. 차르네키스 - 국가는 수익성 있는 산업을 건설하고 산업화해야 한다."
 lithuania.6.b:0 "J. 플레키티스 - 보통 사람들을 돕기 위해 체계를 재구성해야 한다."
 
 lithuania.7.t:0 "우리 경제가 회복되다"
