--- a/Kaiserreich Korean Translation/localisation/KR_Annexation_Decisions_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Annexation_Decisions_l_english.yml
@@ -159,6 +159,8 @@ annexation_KOR_CONQ:0 "한국의 운명"
 annexation_KOR_CONQ_desc:0 "자랑스러운 한민족의 해방 이후 우리는 정복한 한국의 정부를 조직 할 책임이 있습니다. 무엇을 해야할까요?"
 annexation_KUR_CONQ:0 "쿠르디스탄의 운명"
 annexation_KUR_CONQ_desc:0 "Our armies have taken control of the northern part of the Levant, and the local Kurdish population is clamouring for self-government. We should decide what's to be done with the region."
+annexation_KERAF_CONQ:0 "케라페리아의 운명"
+annexation_KERAF_CONQ_desc:0 "Our armies have taken control of Keraferia, the southern most part of the greater Macedonia region contested between Bulgaria and Greece. We should decide what's to be done with the region."
 annexation_LAO_CONQ:0 "라오스의 운명"
 annexation_LAO_CONQ_desc:0 "Our armies have taken control of Laos, and the locals are clamouring for self-government. We should decide what's to be done with the region."
 annexation_LBA_CONQ:0 "리비아의 운명"
@@ -199,6 +201,8 @@ annexation_NER_CONQ:0 "니제르의 운명"
 annexation_NER_CONQ_desc:0 "Our proud armies have just annexed the former French colony of Niger which is now in need of a proper government, should we establish our administration there or should we let them form a local government?"
 annexation_NGR_CONQ:0 "나이지리아의 운명"
 annexation_NGR_CONQ_desc:0 "The vast and rich colony of Nigeria is now under our control and with it comes the burden of having to administer it, could we delegate this task to an extent to a local puppet state?"
+annexation_NIIS_CONQ:0 "니슈의 운명"
+annexation_NIIS_CONQ_desc:0 "The Nis region has been long contested by Serbia and Bulgaria. What should we do with the region?"
 annexation_NIC_CONQ:0 "니카라과의 운명"
 annexation_NIC_CONQ_desc:0 "With Managua in our hands, we now control Nicaragua and are able to decide what do with these lands."
 annexation_NOR_CONQ:0 "노르웨이의 합병"
@@ -220,7 +224,7 @@ annexation_PAP_CONQ_desc:0 "With our troops in control of the eternal city and t
 annexation_PAR_CONQ:0 "파라과이의 운명"
 annexation_PAR_CONQ_desc:0 "Our armies have finally taken control of the Paraguayan capital and occupy the territory of the former state of Paraguay. We should now decide how to set up a competent administration in the area."
 annexation_PER_CONQ:0 "페르시아의 합병"
-annexation_PER_CONQ_desc:0 "After a long fight with the Persians, we have launched a full offensive and forced the Persian Army to surrender. Tehran is now in our hands!"
+annexation_PER_CONQ_desc:0 "After a long fight with the Persians, we have launched a full offensive and forced the Persian Army to surrender. [266.GetName] is now in our hands!"
 annexation_PHI_CONQ:0 "필리핀의 운명"
 annexation_PHI_CONQ_desc:0 "Our armies have managed to take control of the Philippines, and the archipelago is now occupied by us. Should we organise a puppet government?"
 annexation_POL_CONQ:0 "폴란드의 합병"
