--- a/Kaiserreich Korean Translation/localisation/KR_Annexations_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Annexations_l_english.yml
@@ -905,7 +905,7 @@ annex.227.h:0 "인도네시아와 시암에게 분할해주어라"
 annex.227.i:0 "점령하라!"
 annex.228.t:0 "탄누 투바의 운명"
 annex.228.d:0 "Our armies have managed to take control of the area that had once belonged to Tannu Tuva. As it is up to us to decide their fate, we have a few options at this juncture. We can either liberate a loyal Tannu Tuva or occupy them. What shall we do?"
-annex.228.a:0 "Liberate a loyal Tannu Tuva!"
+annex.228.a:0 "충성스러운 탄누투바를 해방시켜라!"
 annex.229.t:0 "로마의 운명"
 annex.229.d:0 "With our troops in control of the eternal city and the surrounding territories, the question of the administration of the area was raised. While creating an Italian government could give us voice on the peninsula, the restoration of the Papal States is demanded by the Holy See and the higher clergy."
 annex.229.a:0 "이탈리아 공화국을 해방하라"
