--- a/Kaiserreich Korean Translation/localisation/KR_Chile_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Chile_l_english.yml
@@ -204,7 +204,7 @@ CHL_additonal_militarization_desc:0 "We must prepare with all our might for the 
 CHL_foreign_method_sharing:0 "Foreign Method Sharing"
 CHL_foreign_method_sharing_desc:0 "In order to bolster the search for knowledge in Chile , we will formally join the Phalanstere International"
 CHL_diplomacy:0 "Foreign Policy Focus"
-CHL_diplomacy_desc:0 "Now that the Third Chairman has taken its place, he must decide on how to focus our diplomatic efforts"
+CHL_diplomacy_desc:0 "Now that our comrades has proclaimed the Argentine Commune, we must decide on how to focus our diplomatic efforts outside of South America."
 CHL_internationale_overtures:0 "Internationale Overtures"
 CHL_internationale_overtures_desc:0 "We will make major moves to formally join the Third Internationale and ensure peace and prosperity worldwide!"
 CHL_veteran_negotiators:0 "Veteran Diplomats"
